--- a/230903_데이터프레임.ipynb
+++ b/230903_데이터프레임.ipynb
@@ -6,12 +6,9 @@
    "metadata": {},
    "source": [
     "### 데이터분석 기초반\n",
-    "- 필수적으로 우리가 알아야 하는 것은 데이터프레임!\n",
-    "- 데이터프레임에 대해서 내가 원하면 자유롭게 코딩할 수 있는 역량이 된다면 가장 나이스하다!\n",
-    "- 데이터프레임은 무엇인가?\n",
-    "- 데이터프레임을 다루기 위해서는 항상 이야기하는 pandas,\n",
-    "- 데이터프레임에서 연산 등을 쉽고 빠르게 하기 위해서 numpy 를 사용하고\n",
-    "- 모델링 등 ML 쪽에 많이 사용하는 sklearn을 사용한다."
+    "- 데이터프레임을 사용하기 위한 pandas\n",
+    "- 데이터프레임에서 연산 등을 쉽고 빠르게 하기 위한 numpy\n",
+    "- 모델링 등 ML 쪽에 많이 사용하는 sklearn을 사용"
    ]
   },
   {
@@ -29,9 +26,7 @@
    "id": "a4ffc66b",
    "metadata": {},
    "source": [
-    "- 2차원 리스트?\n",
-    "- 문법기초반에서 제가 항상 강조하는 부분\n",
-    "- 리스트는 아시죠?"
+    "- 2차원 리스트"
    ]
   },
   {
@@ -118,7 +113,7 @@
     }
    ],
    "source": [
-    "b #데이터프레임과 가장 유사한 개념으로 이해하면 쉽다."
+    "b #데이터프레임과 가장 유사한 개념"
    ]
   },
   {
@@ -126,8 +121,7 @@
    "id": "0e7751eb",
    "metadata": {},
    "source": [
-    "- 1차원과 다르게 2차원이 되는 것은\n",
-    "- 2차원이 되면 가로 세로 x축과 y축으로 \n",
+    "- 1차원과 다르게 2차원에서는 가로 세로 x축과 y축으로 행렬 구조\n",
     "- 행렬 (행과 열의 구조)"
    ]
   },
@@ -419,8 +413,8 @@
     }
    ],
    "source": [
-    "df# 행렬의 개념으로 이해한다면\n",
-    "df# 왼쪽에 있는 수치는 인덱스가 되고\n",
+    "df# 행렬의 개념으로 이해\n",
+    "df# 왼쪽에 있는 수치는 인덱스\n",
     "df# 상단에 있는 manufacturer,... category 컬럼"
    ]
   },
@@ -429,8 +423,7 @@
    "id": "9768e429",
    "metadata": {},
    "source": [
-    "- 데이터의 형식의 구조를 이해하면\n",
-    "- 데이터를 쉽게 추출하거나, 다룰 수 있다."
+    "- 데이터의 형식의 구조 이해가 중요"
    ]
   },
   {
@@ -462,7 +455,7 @@
     }
    ],
    "source": [
-    "a # 시퀀스 객체는 인덱스 부여가 되어서\n",
+    "a # 시퀀스 객체는 인덱스 부여\n",
     "a[0]"
    ]
   },
@@ -471,8 +464,8 @@
    "id": "e6987823",
    "metadata": {},
    "source": [
-    "### 데이터프레임을 접근할 땐\n",
-    "- 행과, 열을 기준으로 접근하면 된다."
+    "### 데이터프레임을 접근시\n",
+    "- 행과, 열을 기준으로 접근"
    ]
   },
   {
@@ -480,7 +473,7 @@
    "id": "80e70cf1",
    "metadata": {},
    "source": [
-    "- 데이터프레임을 직접 만들어보자!"
+    "- 데이터프레임 생성"
    ]
   },
   {
@@ -578,11 +571,8 @@
    "id": "a3919ab7",
    "metadata": {},
    "source": [
-    "- 컬럼을 기준으로 데이터를 추출해 보자!\n",
-    "- 상황에 따라 데이터를 추출하는 방법은 다 다르겠지만, 컬럼을 기준으로 추출해야 하는 상화엥는 이런 식으로 접근하기!\n",
-    "- bda df에서 데분기만 추출하고 싶다!\n",
-    "- 컬럼을 기준으로 추출시\n",
-    "- [] 대괄호를 이용해서 추출"
+    "- 컬럼(column)을 기준으로 데이터를 추출\n",
+    "- 컬럼을 기준으로 추출시 [] 대괄호를 이용하여 추출"
    ]
   },
   {
@@ -680,7 +670,6 @@
     }
    ],
    "source": [
-    "#데분기와, 파문기 두 개를 추출하고 싶다.\n",
     "bda[['데분기','파문기']]"
    ]
   },
@@ -689,11 +678,9 @@
    "id": "2da85ed4",
    "metadata": {},
    "source": [
-    "- 우리가 익숙한 데이터프레임 구조가 아니라 위는 좀 다르다.\n",
-    "- pandas에서 제공하는 데이터 구조가 2개가 있다.\n",
-    "- 데이터프레임, 시리즈 \n",
+    "- pandas에서 제공하는 데이터 구조가 2개 (데이터프레임, 시리즈) \n",
     "- 2차원이상으로 이뤄진 것\n",
-    "- 시리즈는 하나의 차원 -> 브로드캐스팅이 되어서 다양하게 연산이 가능하다!"
+    "- 시리즈는 하나의 차원 -> 브로드캐스팅이 되어서 다양하게 연산 가능"
    ]
   },
   {
@@ -701,7 +688,7 @@
    "id": "eff7499b",
    "metadata": {},
    "source": [
-    "- mpg 데이터로 연습해보면?"
+    "- mpg 데이터로 연습"
    ]
   },
   {
@@ -875,11 +862,9 @@
    "id": "c71728db",
    "metadata": {},
    "source": [
-    "- 행과 열이라고 햇으니\n",
-    "- 열은 오케이 알겠다. [] 대괄호로 가지고 오는 것\n",
-    "- 그럼 행은?\n",
-    "- index 접근하면 된다.\n",
-    "- index range 슬라이싱하면 된다."
+    "- 열은 [] 대괄호로 가지고 오는 것\n",
+    "- 행은 index 접근\n",
+    "- index range 슬라이싱"
    ]
   },
   {
@@ -2241,7 +2226,7 @@
    "metadata": {},
    "source": [
     "- loc (인덱스 기준으로 데이터를 추출)\n",
-    "- iloc 함수 ( 데이터프레임 순서에 따라 추출한다)\n"
+    "- iloc 함수 (데이터프레임 순서에 따라 추출)\n"
    ]
   },
   {
@@ -2536,10 +2521,7 @@
    "id": "abd7c90b",
    "metadata": {},
    "source": [
-    "- fare 요금데이터와 pclass 데이터를 나눠보자!\n",
-    "- pclass별 단가 나온다.\n",
-    "- pclass 등급이기 때문에 이런 식으로 1,2,3, 순서척도로 접근해서 나누는 것은 로직에서 문제지만\n",
-    "- 수업을 위해서 파생변수를 만들어 보자!"
+    "- fare 요금데이터와 pclass 데이터를 분리"
    ]
   },
   {
@@ -2588,7 +2570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tt['pclass_new'] = tt['fare']/tt['pclass'] #판다스가 쉽게 바로바로 문법을 사용할 수 있다!"
+    "tt['pclass_new'] = tt['fare']/tt['pclass']"
    ]
   },
   {
@@ -2740,9 +2722,9 @@
     }
    ],
    "source": [
-    "tt.describe() #요약통계를 추출하여 데이터를 더 이해한다.\n",
-    "# 요약통계는 연속형 데이터가 가능하다.\n",
-    "# 범주형이나, 문자열데이터는 요약통계를 만들 수 없다."
+    "tt.describe() #요약통계를 추출\n",
+    "# 요약통계는 연속형 데이터가 가능\n",
+    "# 범주형이나, 문자열데이터는 요약통계를 만들 수 없음"
    ]
   },
   {
@@ -3053,7 +3035,7 @@
     }
    ],
    "source": [
-    "tt.describe(include='all') #요약통계를 추출하여 데이터를 더 이해한다."
+    "tt.describe(include='all') #요약통계를 추출"
    ]
   },
   {
@@ -3360,8 +3342,8 @@
    "id": "72e54d9f",
    "metadata": {},
    "source": [
-    "- 전체 로우데이터를 -> 원하는 요구 조건 -> 원하는 요구조건-> 내가 원하는 순도 높은 진짜 데이터가 만들어 진다.\n",
-    "- 메서드체이닝 . 찍어서 이어지는 것처럼 pandas도 동일하게 접근이 된다."
+    "- 전체 로우데이터를 -> 원하는 요구 조건 -> 원하는 요구조건-> 내가 원하는 데이터 생성\n",
+    "- 메서드체이닝 . 찍어서 이어지는 것처럼 pandas도 동일하게 접근"
    ]
   },
   {
