--- a/230910_Pandas 문법.ipynb
+++ b/230910_Pandas 문법.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "source": [
     "# 데이터 분석에 필요한 기초문법\n",
-    "- pandas 제공하는 기초 문법들\n",
-    "- 데이터 전처리에 필요한 기초 문법들\n",
+    "- pandas 제공하는 기초 문법\n",
+    "- 데이터 전처리에 필요한 기초 문법\n",
     "    - query()\n",
     "    - [],[[]]\n",
     "    - sort_values()\n",
@@ -16,9 +16,7 @@
     "    - agg()\n",
     "    - merge()\n",
     "    - concat()\n",
-    "    - loc, iloc\n",
-    "    - 시간이되면 str() 문법은 문자열데이터에 다룰 수 있음 넘어갈 수도 있다.\n",
-    "    - 시계열은 시계열데이터 분석에서 진행할 예정"
+    "    - loc, iloc"
    ]
   },
   {
@@ -47,8 +45,7 @@
    "metadata": {},
    "source": [
     "## query()\n",
-    "- 데이터를 추출하는 \n",
-    "- 행 데이터를 추출할 때 사용한다."
+    "- 행 데이터를 추출할 때 사용"
    ]
   },
   {
@@ -282,16 +279,16 @@
     }
    ],
    "source": [
-    "#df 데이터를 추출할 때 \n",
+    "# df 데이터를 추출할 때 \n",
     "# id, nclass 수치형 데이터가 아니라 연속적인 범주형 데이터\n",
     "# 1,2,3,4\n",
     "# 1반,2반\n",
-    "## 이런 데이터는 데이터를 추출할 때 반별로 또는 id별로 추출을 할 것\n",
+    "## 이런 데이터는 데이터를 추출할 때 반별로 또는 id별로 추출\n",
     "\n",
-    "##math, english..\n",
-    "##연속형 변수\n",
-    "## 계산이 가능하다->기초통계 등 분산, 평균, max median등\n",
-    "## 데이터를 추출할 때 이상, 이하, 초과, 미만, 특정 값으로 추출할 수 있다."
+    "## math, english..\n",
+    "## 연속형 변수\n",
+    "## 계산이 가능 -> 기초통계 등 분산, 평균, max median등\n",
+    "## 데이터를 추출할 때 이상, 이하, 초과, 미만, 특정 값으로 추출"
    ]
   },
   {
@@ -379,8 +376,8 @@
     }
    ],
    "source": [
-    "df.query('nclass == 2')#내가 원하는 필터조건을 넣기만 하면 된다.\n",
-    "#nclass 2반 친구들의 데이터가 추출"
+    "df.query('nclass == 2')#원하는 필터조건을 넣기\n",
+    "#nclass 2의 데이터가 추출"
    ]
   },
   {
@@ -576,8 +573,8 @@
     }
    ],
    "source": [
-    "df.query('nclass != 2')#내가 원하는 필터조건을 넣기만 하면 된다.\n",
-    "#nclass 2반 친구들의 데이터가 추출"
+    "df.query('nclass != 2')#원하는 필터조건을 넣기\n",
+    "#nclass 2가 아닌 데이터가 추출"
    ]
   },
   {
@@ -746,7 +743,7 @@
     }
    ],
    "source": [
-    "df.query('english > 80') #값을 넣어서 추출 가능"
+    "df.query('english > 80') #값을 넣어서 추출"
    ]
   },
   {
@@ -817,7 +814,7 @@
    ],
    "source": [
     "# and조건 or조건 \n",
-    "# 논리연산자 가지고 데이터 추출 할 수 있다.\n",
+    "# 논리연산자 가지고 데이터 추출\n",
     "\n",
     "df.query('english > 95 and math >50')"
    ]
@@ -1067,9 +1064,9 @@
     }
    ],
    "source": [
-    "#df query문을 이용해서 다양하게 응용할 수 있다.\n",
+    "#df query문을 이용해서 응용 가능\n",
     "df.query('nclass ==2 & english > 80 & math > 50')\n",
-    "# 데이터의 추출에 필요한 필터링 개념으로 이해하면 좀 더 쉽다."
+    "# 데이터의 추출에 필요한 필터링 개념으로 이해"
    ]
   },
   {
@@ -1268,7 +1265,7 @@
     }
    ],
    "source": [
-    "# id, math, english만 추출하고 싶다.\n",
+    "# id, math, english만 추출\n",
     "df[['id','math','english']]"
    ]
   },
@@ -1322,7 +1319,7 @@
     }
    ],
    "source": [
-    "df_sp['english'] #시리즈 형태로 출력 되고, 컬럼이 1개라서 1차원 개념으로 이해하면 된다."
+    "df_sp['english'] #시리즈 형태로 출력 되고, 컬럼이 1개라서 1차원 개념으로 이해."
    ]
   },
   {
@@ -1499,9 +1496,9 @@
     }
    ],
    "source": [
-    "#나는 수학만 제거하고 싶다.\n",
+    "#수학만 제거\n",
     "df_sp.drop(columns='math') \n",
-    "#여기서 컬럼을 삭제해도 반영되지 않고 원본데이터는 그대로 남아있는다."
+    "#컬럼을 삭제해도 반영되지 않고 원본데이터는 그대로 남아있음"
    ]
   },
   {
@@ -1701,9 +1698,9 @@
    "id": "17cc0d1d",
    "metadata": {},
    "source": [
-    "### 원본 데이터를 변경하고 싶으면 두 가지 방법\n",
-    "- 변수로 넣으면 된다.\n",
-    "- inplace=True 원본데이터까지 변경해 준다."
+    "### 원본 데이터를 변경하는 두 가지 방법\n",
+    "- 새로운 변수로 만들기\n",
+    "- inplace=True 원본데이터까지 변경"
    ]
   },
   {
@@ -1725,9 +1722,9 @@
     }
    ],
    "source": [
-    "#나는 수학만 제거하고 싶다.\n",
+    "#수학만 제거\n",
     "df_sp.drop(columns='math',inplace=True) \n",
-    "# inplace 하지 않아서 반영이 안 되는 경우 있으니 조심하자!"
+    "# inplace 하여 원본 데이터에서도 제거"
    ]
   },
   {
@@ -1906,7 +1903,7 @@
    "id": "fdabf992",
    "metadata": {},
    "source": [
-    "### Python 메서드체이닝으로 문법이 이어진다."
+    "### Python 메서드체이닝"
    ]
   },
   {
@@ -2087,7 +2084,7 @@
     }
    ],
    "source": [
-    "#반대로 진행해 보자!\n",
+    "#반대로 진행\n",
     "df[['id','nclass','math']].query('nclass==4 & math >30')"
    ]
   },
@@ -2331,7 +2328,7 @@
    ],
    "source": [
     "df.sort_values('math')\n",
-    "# 아 오름차순이 디폴트다."
+    "# 오름차순이 디폴트"
    ]
   },
   {
@@ -2563,7 +2560,7 @@
     }
    ],
    "source": [
-    "#내림차순은\n",
+    "#내림차순\n",
     "df.sort_values('math', ascending=False)"
    ]
   },
@@ -2723,8 +2720,8 @@
    "id": "d17938f4",
    "metadata": {},
    "source": [
-    "### 오름차순, 내림차순 기준이 한 개인 경우만 있는 건 아니다.\n",
-    "### 두 개 이상의 조건으로 차순을 정리한다면?"
+    "### 오름차순, 내림차순 기준이 한 개인 경우만 있는 건 아님\n",
+    "### 두 개 이상의 조건으로 차순을 정리"
    ]
   },
   {
@@ -2959,9 +2956,9 @@
    ],
    "source": [
     "#df.sort_values('math')\n",
-    "#한 개 더 추가하면 2차원의 개념이라 꼭 리스트로 넣어야 하고\n",
+    "#한 개 더 추가하면 2차원의 개념이라 리스트로 넣어야 함\n",
     "df.sort_values(['math','nclass'])\n",
-    "# 수학이 가장 먼저 앞에 있어서 메인 , 서브가 nclass\n"
+    "# 수학이 가장 앞에 있어서 메인 , 서브가 nclass\n"
    ]
   },
   {
@@ -3193,7 +3190,7 @@
     }
    ],
    "source": [
-    "#오름차순이 디폴트인데 내림차순도 하고 싶어!\n",
+    "#오름차순이 디폴트이지만 내림차순도 필요한 경우\n",
     "df.sort_values(['math','nclass'], ascending=[True,False])"
    ]
   },
@@ -3203,20 +3200,20 @@
    "metadata": {},
    "source": [
     "### 파생변수 만들기!\n",
-    "- 판다스에서 컬럼과 컬럼을 가지고 바로 작업할 수 있고\n",
-    "- apply 함수를 이용해서 lambda를 적용할 수 있고\n",
-    "- loc, iloc 으로 접근해서 만들 수 있다.\n",
+    "- 판다스에서 컬럼과 컬럼을 가지고 바로 작업할 수 있음\n",
+    "- apply 함수를 이용해서 lambda를 적용할 수 있음\n",
+    "- loc, iloc 으로 접근해서 만들 수 있음\n",
     "- assign() 함수 사용\n",
     "- 방법은 다양하지만 결국은 파생변수를 만드는 것\n",
     "\n",
     "### 파생변수\n",
     "- 외부변수, 파생변수 \n",
     "- 통상적으로는 내부 데이터를 가지고 새로운 변수를 만드는 것\n",
-    "- 재료 조건이 내부 데이터 안에 있고 그 데이터를 가지고 -> 새로운 변수를 만든다.\n",
+    "- 재료 조건이 내부 데이터 안에 있고 그 데이터를 가지고 -> 새로운 변수를 만듬\n",
     "\n",
     "\n",
-    "- 그 변수를 왜 만드는가?\n",
-    "- 1. 데이터 분석에 필요한 경우 만들 수 있다. 새로운 평균이라는 기준점을 가지고 분석을 해야 하는 경우 (매출 CAGR 3개년치 성장율)\n",
+    "- 그 변수를 만드는 이유\n",
+    "- 1. 데이터 분석에 필요한 경우 만들 수 있음. 새로운 평균이라는 기준점을 가지고 분석을 해야 하는 경우 (매출 CAGR 3개년치 성장율)\n",
     "- 2. 모델링을 통해 피처에 대한 엔지니어링을 진행하는 경우\n",
     "- 기타 등등.."
    ]
@@ -3525,8 +3522,7 @@
     }
    ],
    "source": [
-    "#assign 함수를 이용하기! 파생변수를 만들 수 있다.\n",
-    "#assign 이용해서 만드는 것 뿐\n",
+    "#assign 함수를 이용, 파생변수를 만들 수 있음\n",
     "\n",
     "df.assign(mean_s = (df['math']+df['english']+df['science'])/3)"
    ]
@@ -3812,7 +3808,7 @@
    "id": "6f60aeed",
    "metadata": {},
    "source": [
-    "### assign함수를 이용해서 여러가지 파생 변수를 만들 수 있다."
+    "### assign함수를 이용해서 여러가지 파생 변수를 만들 수 있음"
    ]
   },
   {
@@ -3954,7 +3950,7 @@
     }
    ],
    "source": [
-    "#추가로 파생변수 만들 수 있고 ,이용해서 나아가는 것\n",
+    "#추가로 파생변수 만들 수 있음\n",
     "df.assign(mean_t = (df['math'] + df['english'] + df['science'])/ 3, inplace=True, no=1).head(5)"
    ]
   },
@@ -4286,7 +4282,7 @@
    ],
    "source": [
     "np.where(df['3_mean']>67.3)\n",
-    "#넘파이 함수를 이용해서 index로 위치를 잡고 그 잡은 위치에 값을 넣는 개념"
+    "#넘파이 함수를 이용하여 index로 위치를 잡고 그 잡은 위치에 값을 넣는 개념"
    ]
   },
   {
@@ -4886,11 +4882,11 @@
    "metadata": {},
    "source": [
     "### groupby \n",
-    "- 그룹으로 묶는다.\n",
+    "- 그룹으로 묶음\n",
     "- 그룹으로 통계치를 계산하거나, 카운팅을 계산하거나 등등\n",
     "- 결국은 그룹으로 무엇을 묶는다는 것이 중요한 포인트!\n",
     "\n",
-    "- df.groupby(기준).agg(변수, 요약통계치) 결과를 확인한다."
+    "- df.groupby(기준).agg(변수, 요약통계치) 결과를 확인"
    ]
   },
   {
@@ -4911,9 +4907,8 @@
     }
    ],
    "source": [
-    "df # nclass 예를 묶으면 반별 어떤 결과 나올 것 \n",
-    "#groupby 는 agg 함수랑 같이 많이 사용한다.\n",
-    "df.groupby('nclass')"
+    "df\n",
+    "df.groupby('nclass') #groupby 는 agg 함수랑 같이 많이 사용한다."
    ]
   },
   {
