--- a/231105_Pandas 문법.ipynb
+++ b/231105_Pandas 문법.ipynb
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "#그냥 바로 컬럼을 잡고 통계치를 볼 수 있다.\n",
+    "#그냥 바로 컬럼을 잡고 통계치 확인 가능\n",
     "df.groupby('year').lifeExp.sum()"
    ]
   },
@@ -387,7 +387,7 @@
     }
    ],
    "source": [
-    "#2가지 이상을 잡게 된다면?\n",
+    "#2가지 이상을 확인하는 경우\n",
     "df.groupby('year')[['lifeExp','pop']].mean()"
    ]
   },
@@ -398,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df.groupby('year').lifeExp.agg(내가 원하는 함수를 넣어서 사용할 수 있다.)"
+    "#df.groupby('year').lifeExp.agg(원하는 함수를 넣어서 사용할 수 있음)"
    ]
   },
   {
@@ -408,14 +408,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#내가 원하는 함수를 만들어서 넣을 수 있다.\n",
+    "#원하는 함수를 만들어서 넣을 수 있음\n",
     "def my_mean(values):\n",
     "    n = len(values)\n",
     "    sum_1 = 0\n",
     "    for value in values:\n",
     "        sum_1+= value\n",
     "    return sum_1/n\n",
-    "#내가 원하는 함수를 만들어서 agg 같이 넣을 수 있다."
+    "#원하는 함수를 만들어서 agg 같이 넣을 수 있음"
    ]
   },
   {
@@ -457,7 +457,7 @@
    "id": "8094b087",
    "metadata": {},
    "source": [
-    "- numpy를 이용해서 추가할 수 있다.\n",
+    "- numpy를 이용해서 추가할 수 있음\n",
     "- agg 함수에 추가"
    ]
   },
@@ -609,13 +609,13 @@
    "metadata": {},
    "source": [
     "### merge \n",
-    "- merge 데이터 데이터를 합치는 경우에 발생한다.\n",
+    "- merge 데이터 데이터를 합치는 경우에 발생\n",
     "- 실무에서는 DA sql 충분히 가능하지만,\n",
-    "- DS 데이터셋을 정리하는 경우도 있다. \n",
-    "- 테이블을 병합시키고 정리해서 우리가 원하는 테스트셋을 만드는 경우 \n",
-    "- pandas 많이사용한다.\n",
+    "- DS 데이터셋을 정리하는 경우도 있다.\n",
+    "- 테이블을 병합시키고 정리해서 원하는 테스트셋을 만드는 경우 \n",
+    "- pandas를 많이 사용\n",
     "\n",
-    "- 데이터간의 병합을 통해 내가원하는 새로운 테이블 만드는 개념\n",
+    "- 데이터간의 병합을 통해 원하는 새로운 테이블 만드는 개념\n",
     "- merge\n",
     "- concat"
    ]
@@ -670,7 +670,7 @@
     "- test1과 test2\n",
     "- class에 따라 인원, 벌점평균을 같이 볼 수 있는 테이블 만드는 경우\n",
     "\n",
-    "- 공통의 키로 가지고 가서 class를 잡고 병합을 한다."
+    "- 공통의 키로 가지고 가서 class를 잡고 병합"
    ]
   },
   {
@@ -1918,12 +1918,7 @@
     "- drop_duplicates() 중복 제거하기\n",
     "- get_values()시리즈의 값 구하기\n",
     "- sort_values()\n",
-    "- to_frame()\n",
-    "\n",
-    "--- \n",
-    "### 필수과제1\n",
-    "- 시리즈 형태 문법을 직접 작성해서 값이 어떻게 나오는지 확인하기 ( 위의 적힌 문법들 )\n",
-    "- 구글링을 통해 위의 문법 외에 최소 3개 이상 정도 검색해서 해당 문법 설명과 코드 작성해서 표현하기"
+    "- to_frame()"
    ]
   },
   {
@@ -1960,8 +1955,8 @@
    "id": "2a4591d8",
    "metadata": {},
    "source": [
-    "## 컬럼의 여러가지 의미가 있는 데이터의 경우 좀 더 깔끔하게 만드는 법!\n",
-    "- 통계청 데이터들 보면 컬럼들이 날짜로 나열되고 있고 이 부분을 행으로 바꾸면 더욱 깔끔하게 데이터를 볼 수 있다."
+    "## 컬럼의 여러가지 의미가 있는 데이터의 경우 좀 더 깔끔하게 만드는 법\n",
+    "- 통계청 데이터들의 경우 컬럼들이 날짜로 나열되고 있고 이 부분을 행으로 바꾸면 더욱 깔끔하게 데이터를 볼 수 있다."
    ]
   },
   {
@@ -3353,9 +3348,9 @@
    "id": "970dd719",
    "metadata": {},
    "source": [
-    "## 컬럼의 여러가지 의미가 있는 데이터의 경우 어떤 식으로 나누면 좋을까?\n",
+    "## 컬럼의 여러가지 의미가 있는 데이터의 경우 어떤 식으로 나눠야 하는지\n",
     "- 컬럼을 나눠서 새로운 컬럼을 만들 수 있다.\n",
-    "- 피처엔지니어링의 개념으로 접근해서 파생변수를 만든다!"
+    "- 피처엔지니어링의 개념으로 접근해서 파생변수를 만든다"
    ]
   },
   {
@@ -3624,17 +3619,6 @@
    ],
    "source": [
     "ebola_pre"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dd7003c0",
-   "metadata": {},
-   "source": [
-    "### 필수과제2\n",
-    "- 샘플로 드린 날씨데이터를 직접 Melt 함수를 이용해서 깔끔하게 정리해 주세요!\n",
-    "- 꼭 melt가 아니어도 다른 함수를 가능합니다.\n",
-    "- 깔끔하게 정리된 데이터로 print()로 보여주시면 됩니다."
    ]
   }
  ],
