--- a/231112_데이터 병합.ipynb
+++ b/231112_데이터 병합.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "## 데이터 병합은 필수적으로 알아야 하는 문법\n",
     "- sql 쪽에서는 기본적으로 join 이용하여 원하는 테이블 쿼리 추출\n",
-    "- python도 가능하다.\n",
+    "- python도 가능\n",
     "\n",
-    "- sql 빠르게 확인하는 경우 많이 사용합니다.\n",
+    "- sql 빠르게 확인하는 경우 많이 사용\n",
     "- Python은 환경이나 제약조건 -> 무겁게 데이터를 다뤄야 한다. \n",
-    "- python 데이터 병합에 대한 자유로운 분석 스킬은 향상 -> merge, concat 잘 이해하기!\n",
-    "- 데이터 병합은 맥락이 동일하다."
+    "- python 데이터 병합에 대한 자유로운 분석 스킬은 향상 -> merge, concat 이해\n",
+    "- 데이터 병합은 맥락이 동일"
    ]
   },
   {
@@ -448,7 +448,7 @@
     "display(pd.concat([df2,df1], axis=0)) #0행, 1열 기준 \n",
     "display(pd.concat([df2,df1], axis=1)) #0행, 1열 기준 \n",
     "\n",
-    "# 가장 먼저 쓴 데이프레임이 기본 축이 된다. "
+    "# 가장 먼저 쓴 데이프레임이 기본 축 "
    ]
   },
   {
@@ -527,7 +527,7 @@
    ],
    "source": [
     "display(pd.concat([df2,df1], axis=0,ignore_index= True)) #0행, 1열 기준 \n",
-    "# 인덱스를 새롭게 정렬할 수 있다."
+    "# 인덱스를 새롭게 정렬"
    ]
   },
   {
@@ -895,7 +895,7 @@
    ],
    "source": [
     "display(pd.concat([df1, df2, df3], axis=1)) #0행, 1열 기준 \n",
-    "#중복컬럼이 생긴다."
+    "#중복컬럼이 생김"
    ]
   },
   {
@@ -977,7 +977,7 @@
    "metadata": {},
    "source": [
     "## merge 함수\n",
-    "- join이라는 함수가 들어간다!\n",
+    "- join이라는 함수가 들어감\n",
     "- join 공통의 컬럼이 필요하다 ( pk 개념 )\n",
     "- 공통적인 부분을 기준으로 합친다. \n",
     "\n",
@@ -991,8 +991,7 @@
     "- right_on : 오른쪽 데이터프레임에서 join 키로 사용할 컬럼 목록 적기\n",
     "- left_index : 왼쪽 데이터프레임의 join기준 인덱스 사용할지 여부\n",
     "- right_index : 오른쪽 데이터프레임 join기준 인덱스 사용할지 여부\n",
-    "- how : join 방법을 결정한다. 기본 디폴트느 'inner'\n",
-    "\n"
+    "- how : join 방법을 결정한다. 기본 디폴트는 'inner'"
    ]
   },
   {
@@ -1147,8 +1146,8 @@
    "metadata": {},
    "source": [
     "- 조인을 하는 경우는 대부분\n",
-    "- 하나의 테이블, 데이터프레임에서 얻을 수 없는 결과들을 한 번에 테이블로 만들어서 다양한 데이터를 분석할 수 있다.\n",
-    "- 반과 점수를 같이 합쳐서 길동이들의 반별 점수를 알 수 있다."
+    "- 하나의 테이블, 데이터프레임에서 얻을 수 없는 결과들을 한 번에 테이블로 만들어서 다양한 데이터를 분석할 수 있음\n",
+    "- 반과 점수를 같이 합쳐서 길동이들의 반별 점수를 알 수 있음"
    ]
   },
   {
@@ -1298,7 +1297,7 @@
    "id": "b0a3e6b5",
    "metadata": {},
    "source": [
-    "- inner 조인 디폴트라-> 공통의 교집합만 출력하게 된다."
+    "- inner 조인 디폴트라-> 공통의 교집합만 출력"
    ]
   },
   {
@@ -1306,7 +1305,7 @@
    "id": "203deb86",
    "metadata": {},
    "source": [
-    "### join 키가 두 개 이상인 경우!"
+    "### join 키가 두 개 이상인 경우"
    ]
   },
   {
@@ -1528,7 +1527,7 @@
     }
    ],
    "source": [
-    "#2개 이상을 Join key로 사용하기\n",
+    "#2개 이상을 Join key로 사용\n",
     "\n",
     "pd.merge(df1, df2, on=['이름','학번'])"
    ]
@@ -1608,8 +1607,8 @@
    "metadata": {},
    "source": [
     "### left_on, right_on\n",
-    "- 컬럼명이 다를거다. \n",
-    "- 컬럼 이름은 다르지만 값이 같다면 그 내용을 지정해서 join을 하게 된다."
+    "- 컬럼명이 다름\n",
+    "- 컬럼 이름은 다르지만 값이 같다면 그 내용을 지정해서 join"
    ]
   },
   {
@@ -1927,7 +1926,7 @@
     }
    ],
    "source": [
-    "#중복이 나오지 않는다.\n",
+    "#중복이 나오지 않음\n",
     "pd.merge(df1, df2, left_on='이름', right_on='이름')"
    ]
   },
@@ -1936,7 +1935,7 @@
    "id": "302fdf0a",
    "metadata": {},
    "source": [
-    "- join key로 잡은 것 외에 이름이라는 두 개의 컬럼이 동일하다.\n",
+    "- join key로 잡은 것 외에 이름이라는 두 개의 컬럼이 동일\n",
     "- 중복이 발생해서 이름_x, 이름_y ( 중복 ) "
    ]
   },
@@ -2103,9 +2102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#인덱스를 지정해야 하니\n",
-    "# 인덱스가 0,1,2,3 순서로 되어 있는데\n",
-    "# 만약 이름을 인덱스로 지정하면\n",
+    "# 이름을 인덱스로 지정할 경우\n",
     "\n",
     "df_sp=df1.set_index('이름')"
    ]
@@ -2292,7 +2289,7 @@
     }
    ],
    "source": [
-    "pd.merge(df_sp, df2, left_index = True) #right_on도 지정해야 한다!"
+    "pd.merge(df_sp, df2, left_index = True) #right_on도 지정해야 함"
    ]
   },
   {
@@ -2969,7 +2966,7 @@
     }
    ],
    "source": [
-    "pd.merge(df1,df2, on='이름',how='outer') #left, outer 모든 값을 다 합친 경우에 outer 만들어진다."
+    "pd.merge(df1,df2, on='이름',how='outer') #left, outer 모든 값을 다 합친 경우에 outer 만들어짐"
    ]
   },
   {
@@ -3191,7 +3188,7 @@
     }
    ],
    "source": [
-    "# join key 공통 값이 있어도 병합이 된다.\n",
+    "# join key 공통 값이 있어도 병합이 된다\n",
     "pd.merge(df1, df2, on='이름', how='inner')"
    ]
   },
@@ -3434,7 +3431,7 @@
     }
    ],
    "source": [
-    "# 병합의 잘못된 예 테스트!\n",
+    "# 병합의 잘못된 예시\n",
     "pd.merge(df1, df2, on='이름', how='inner')"
    ]
   },
@@ -3677,7 +3674,7 @@
     }
    ],
    "source": [
-    "# 병합의 잘못된 예 테스트!\n",
+    "# 병합의 잘못된 예시\n",
     "pd.merge(df1, df2, on='이름', how='inner')"
    ]
   },
@@ -3686,7 +3683,7 @@
    "id": "3c7823d1",
    "metadata": {},
    "source": [
-    "###  데이터 병합하실 때는 꼭 중복에 대해서 잘 체크해서 병합해야 합니다!!"
+    "###  데이터 병합하실 때는 꼭 중복에 대해서 잘 체크하여 병합"
    ]
   },
   {
@@ -3940,7 +3937,7 @@
     }
    ],
    "source": [
-    "# 병합의 잘못된 예 테스트!\n",
+    "# 병합의 잘못된 예시\n",
     "pd.merge(df1, df2, on='이름', how='inner')"
    ]
   },
@@ -3949,7 +3946,7 @@
    "id": "99db634b",
    "metadata": {},
    "source": [
-    "## 샘플 데이터로 데이터 병합해 보자!"
+    "## 샘플 데이터로 데이터 병합"
    ]
   },
   {
@@ -4140,9 +4137,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#site, vit 합치자!\n",
-    "#어떤 컬럼을 기준으로 하고 left right inner \n",
-    "#해당 데이터의 로직과 비즈니스 도메인 등 데이터 베이스의 설계 개념을 이해야 한다.\n",
+    "# site, vit 합치기\n",
+    "# 어떤 컬럼을 기준으로 하고 left right inner \n",
+    "# 해당 데이터의 로직과 비즈니스 도메인 등 데이터 베이스의 설계 개념을 이해야 함\n",
     "# vit 전체 메타데이터 (전체를 만드는 유니크한 메타데이터)\n",
     "# 메타스키마의 개념으로 전체를 관리하는 테이블이 항상 존재 \n",
     "\n",
@@ -4874,14 +4871,6 @@
    ],
    "source": [
     "display(survey)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0e093cb1",
-   "metadata": {},
-   "source": [
-    "### 꼭 복습을 잘 진행해 주세요!"
    ]
   }
  ],
