--- a/231119_데이터 시각화.ipynb
+++ b/231119_데이터 시각화.ipynb
@@ -6,22 +6,22 @@
    "metadata": {},
    "source": [
     "## 데이터 시각화\n",
-    "- 시각화 모듈의 문법과 로직을 배우자!\n",
+    "- 시각화 모듈의 문법과 로직\n",
     "\n",
     "- matplotlib, seaborn \n",
-    "- matplot 불편한 부분이 있다보니, 시본으로 많이 사용하는데\n",
+    "- matplot 불편한 부분이 있다보니, seaborn으로 많이 사용\n",
     "- 둘은 기본적으로 시각화하는데 가장 많이 사용하는 툴\n",
-    "- 시각화 툴을 -> 태블로 많이 보고 빠르게 확인한다. \n",
+    "- 시각화 툴을 -> Tableau 많이 보고 빠르게 확인\n",
     "\n",
-    "### 왜 시각화를 진행하는지?\n",
+    "### 왜 시각화를 진행하는지\n",
     "- 시각화 기능\n",
     "- 데이터 분석의 나의 주장이나, 가설을 설득하기 위한 하나의 과정\n",
     "- 나의 주장과 가설 등을 잘 뒷받침할 수 있는 시각화를 통해 상대방 설득하게 되는 것\n",
     "- 시각화를 의미가 변수간의 관계 확인용도 있지만, 데이터 분석에서 본인의 주장이, 가설이 베이스로 진행이 되는 것\n",
     "\n",
     "#### 시각화는 상대방을 쉽게 설득시킬 수 있어야 한다.\n",
-    "#### 맥킨지에서도 말하지만 데이터 시각화로 잘못되게 표현하면 안 된다.\n",
-    "#### 다양한 시각화 그래프가 많지만, 가장  단순하고 가장 확실한 눈에 이해할 수 있는 시각화 등이 중요하지 화려하다고 좋은 게 아니다.\n",
+    "#### 데이터 시각화로 잘못되게 표현하면 안 된다.\n",
+    "#### 다양한 시각화 그래프가 많지만, 가장 단순하고 가장 확실한 눈에 이해할 수 있는 시각화 등이 중요, 화려하다고 좋은 게 아님\n",
     "- 수치에 대한 주석처리와 숫자에 대한 정확한 표시는 기본이다.\n",
     "- 이런 단위 부터해서 기본적인 수치에 대한 기준 명시하지 않으면 이 부분은 신뢰할 수 없다."
    ]
@@ -45,14 +45,14 @@
     "### matplot \n",
     "- Figure 큰 도화지의 개념\n",
     "- ax 축의 개념\n",
-    "- 도화지를 그릴 때 큰 그림을 그리고 -> 그 안에 그림을 채우는 형식으로 진행이 된다. ( 시각화 모듈의 로직 )\n",
-    "- 큰 그림을 먼저 그리고 -> 안의 세부적인 부분을 추가한다!\n",
+    "- 도화지를 그릴 때 큰 그림을 그리고 -> 그 안에 그림을 채우는 형식으로 진행이 되는 것 처럼 ( 시각화 모듈의 로직 )\n",
+    "- 큰 그림을 먼저 그리고 -> 안의 세부적인 부분을 추가\n",
     "\n",
     "### 기본 문법\n",
-    "- plt. 이어진다. \n",
+    "- plt. 이어진다.\n",
     "\n",
     "### %matplotlib inline \n",
-    "- 매직커맨드 show 하지 않고 바로 볼 수 있게 해주는 것"
+    "- 매직커맨드, show 하지 않고 바로 볼 수 있게 해주는 것"
    ]
   },
   {
@@ -60,10 +60,9 @@
    "id": "48c52555",
    "metadata": {},
    "source": [
-    "## 산점도를 가지고 그림 그리기!\n",
-    "## 시각화 할 때 꼭 알아야 하는 아주 중요한 것은\n",
-    "## 데이터의 타입이다. \n",
-    "## 연속형인가 범주형인가에 따라 우리가 그릴 수 있는 시각화가 달라진다!"
+    "## 산점도를 가지고 그림 그리기\n",
+    "## 시각화 할 때 꼭 알아야 하는 아주 중요한 것은 데이터의 타입\n",
+    "## 연속형인가 범주형인가에 따라 우리가 그릴 수 있는 시각화가 달라짐"
    ]
   },
   {
@@ -105,7 +104,7 @@
    "id": "7b29ae78",
    "metadata": {},
    "source": [
-    "- 한글폰트가 깨지는 분들 있다."
+    "- 한글폰트 확인"
    ]
   },
   {
@@ -113,9 +112,9 @@
    "id": "645dd610",
    "metadata": {},
    "source": [
-    "### 축의 범위 설정!\n",
-    "- x축과 y축이 내가 원하는 범위의 값만 보여줄 수 있다.\n",
-    "- 축의 범위를 조정 가능하다.\n",
+    "### 축의 범위 설정\n",
+    "- x축과 y축이 내가 원하는 범위의 값만 보여줄 수 있음\n",
+    "- 축의 범위를 조정 가능\n",
     "\n",
     "- xlim, ylim"
    ]
@@ -200,7 +199,7 @@
     "## 눈금값 설정\n",
     "- xticks\n",
     "- yticks \n",
-    "- 눈금값을 설정할 수 있다."
+    "- 눈금값을 설정할 수 있음"
    ]
   },
   {
@@ -288,7 +287,7 @@
    "id": "72b4df4b",
    "metadata": {},
    "source": [
-    "### plt문법이 겹치게 사용하면 추가 확장된다."
+    "### plt문법이 겹치게 사용하면 추가 확장"
    ]
   },
   {
@@ -338,7 +337,7 @@
     "- right\n",
     "- upper left\n",
     "- loew left \n",
-    "- 나머지도 다 된다."
+    "- 나머지도 가능"
    ]
   },
   {
@@ -382,7 +381,7 @@
    "id": "efc1b1d9",
    "metadata": {},
    "source": [
-    "### 그래프의 크기와 스타일을 설정!"
+    "### 그래프의 크기와 스타일을 설정"
    ]
   },
   {
@@ -465,7 +464,7 @@
    "id": "d8ab166e",
    "metadata": {},
    "source": [
-    "### 두 가지 이상의 그래프를 그려보기!"
+    "### 두 가지 이상의 그래프를 그려보기"
    ]
   },
   {
@@ -473,7 +472,7 @@
    "id": "20ee1015",
    "metadata": {},
    "source": [
-    "- 선그래프를 그려보기! plot \n",
+    "- 선그래프를 그려보기 plot \n",
     "- plt.plot() 안에 들어가는 파라미터는 조금씩 다를 수 있다."
    ]
   },
@@ -596,7 +595,7 @@
     "### 마커설정\n",
     "- 해당 값에 대한 지정 marker\n",
     "- . 점, o 원 s 사각형 * 별, D 다이아몬드 등등 \n",
-    "- marker , markersize 지정가능하다."
+    "- marker , markersize 지정 가능"
    ]
   },
   {
@@ -726,7 +725,7 @@
     }
    ],
    "source": [
-    "# 투명하게 만들 수 있는 방법은?\n",
+    "# 투명하게 만드는 방법\n",
     "plt.scatter(x,y,alpha = 0.03)\n",
     "# alpha "
    ]
@@ -776,7 +775,7 @@
    "id": "e373efd7",
    "metadata": {},
    "source": [
-    "### 눈금값, 스타일 설정해 보자!"
+    "### 눈금값, 스타일 설정"
    ]
   },
   {
@@ -845,7 +844,7 @@
     }
    ],
    "source": [
-    "#width 막대그래프 크기 조절\n",
+    "# width 막대그래프 크기 조절\n",
     "# linewidth 막대그래프 가장자리 조절\n",
     "plt.bar([1,2,3],[10,20,30],width= 0.3, color= 'orange',linewidth= 3.5)\n",
     "plt.xticks([1,2,3],['A','B','C'])"
@@ -882,7 +881,7 @@
     }
    ],
    "source": [
-    "#width 막대그래프 크기 조절\n",
+    "# width 막대그래프 크기 조절\n",
     "# linewidth 막대그래프 가장자리 조절\n",
     "plt.bar([1,2,3],[10,20,30], width= 0.3, color= ['orange','red','blue'],linewidth= 3.5)\n",
     "plt.xticks([1,2,3],['A','B','C'])"
@@ -894,7 +893,7 @@
    "metadata": {},
    "source": [
     "### 박스플롯(boxplot) \n",
-    "- 이상치 할 때 했던 그 그래프!\n",
+    "- 이상치 할 때 사용한 그래프\n",
     "- 수치형 데이터가 필요함\n",
     "- plt.boxplot()"
    ]
@@ -906,7 +905,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "x = np.random.normal(10,3,200)"
    ]
   },
@@ -956,7 +954,7 @@
    "outputs": [],
    "source": [
     "x = np.random.normal(10,3,200)\n",
-    "y = np.random.normal(10,2,300)\n"
+    "y = np.random.normal(10,2,300)"
    ]
   },
   {
@@ -1078,7 +1076,7 @@
     }
    ],
    "source": [
-    "#막대의 개수를 조정할 수 있다.\n",
+    "# 막대의 개수 조정 가능\n",
     "plt.hist(x,bins=3)"
    ]
   },
@@ -1258,7 +1256,7 @@
     }
    ],
    "source": [
-    "sns.heatmap(df, annot=True, fmt='.1f') # 정수 소수 값들 다 조정 가능하다!"
+    "sns.heatmap(df, annot=True, fmt='.1f') # 정수 소수 값들 다 조정 가능"
    ]
   },
   {
@@ -1329,10 +1327,10 @@
    "metadata": {},
    "source": [
     "## 여러 개의 그래프 그리기\n",
-    "- 여러 개의 그래프를 그리게 되는 경우는 subplots 을 사용하고, 좌표를 찍어서 해당 위치에 그래프를 그릴 수 있다!\n",
+    "- 여러 개의 그래프를 그리게 되는 경우는 subplots 을 사용하고, 좌표를 찍어서 해당 위치에 그래프를 그릴 수 있다\n",
     "\n",
     "- Figure 큰 도화지\n",
-    "- Axes 축을 이용해서 지정을 한다.\n"
+    "- Axes 축을 이용해서 지정을 한다."
    ]
   },
   {
@@ -1460,7 +1458,7 @@
    "id": "5b10cb07",
    "metadata": {},
    "source": [
-    "### 그래프를 실제로 그려보아서 이 축을 지정하여 그래프를 그리자!"
+    "### 그래프를 실제로 축을 지정하여 그리기"
    ]
   },
   {
@@ -1514,7 +1512,7 @@
    "source": [
     "fig, ax = plt.subplots(nrows=1, ncols=2, figsize=(10,7))\n",
     "\n",
-    "#축을 지정해서 그래프를 그려보자!\n",
+    "#축을 지정해서 그래프를 그리기\n",
     "ax[0].plot(x1,y1, color='red')\n",
     "ax[1].bar(x2,y2, color='green')\n",
     "\n",
@@ -1544,19 +1542,6 @@
    ],
    "source": [
     "ax[1]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c846b620",
-   "metadata": {},
-   "source": [
-    "### 복습과제 꼭 잘 해주세요!\n",
-    "- 시각화를 다 배우면 -> 분석리포팅에 시각화는 기본적으로 다 하셔야 하는 것이라서\n",
-    "- 시각화를 배우는 기간에는 따로 어렵게 내진 않는다.\n",
-    "- 시각화를 다 배우면 리포팅 과제들이 있을 예정이니 꼭 복습하시고\n",
-    "- 그래프 배우지 않은 것들은 matplot 구글링하면 정말 많은 것들이 있다.\n",
-    "- 이 부분은 구글링 하면 다 나오고 matplot 웹사이트도 있어서 여기서 확인해 보시면 더 다양한 코드들을 볼 수 있다."
    ]
   },
   {
