--- a/240107_시계열 데이터 예측.ipynb
+++ b/240107_시계열 데이터 예측.ipynb
@@ -472,9 +472,9 @@
    "id": "82e0b75e",
    "metadata": {},
    "source": [
-    "## 결측값에 대한 내용!\n",
+    "## 결측값에 대한 내용\n",
     "- 보간법에 대한 내용\n",
-    "- 시계열 데이터의 경우는 보간법과 같은 데이터 missing value를 대체하면 좋다. "
+    "- 시계열 데이터의 경우는 보간법과 같은 데이터 missing value를 대체하면 좋다."
    ]
   },
   {
@@ -495,7 +495,6 @@
     }
    ],
    "source": [
-    "\n",
     "f, ax = plt.subplots(nrows=5, ncols=1, figsize=(15, 25))\n",
     "\n",
     "sns.lineplot(x=df.Date, y=df.Rainfall.fillna(np.inf), ax=ax[0], color='dodgerblue')\n",
@@ -804,7 +803,7 @@
    "id": "08b6129a",
    "metadata": {},
    "source": [
-    "## Resample을 이용해서 해당 데이터의 월, 일, 년 도로 데이터를 확인했다."
+    "## Resample을 이용해서 해당 데이터의 월, 일, 년 도로 데이터를 확인"
    ]
   },
   {
