--- a/240114_시계열 분석.ipynb
+++ b/240114_시계열 분석.ipynb
@@ -655,14 +655,14 @@
     }
    ],
    "source": [
-    "# 주별 집계 데이터 테이블을 만들기!\n",
+    "# 주별 집계 데이터 테이블을 만들기\n",
     "\n",
     "df['Date2']= pd.to_datetime(df['Date'])\n",
     "#날짜 정렬하기\n",
     "df = df.sort_values(by='Date2')\n",
     "\n",
     "#연도 컬럼 빼기 \n",
-    "df['year'] = df['Date2'].dt.year # 시계열 데이터인 경우는 dt.year, month 요일 별 값을 추출 가능하다!\n",
+    "df['year'] = df['Date2'].dt.year # 시계열 데이터인 경우는 dt.year, month 요일 별 값을 추출 가능\n",
     "\n",
     "# 집계 컬럼만들기\n",
     "\n",
@@ -710,7 +710,7 @@
     }
    ],
    "source": [
-    "# 전체 예측할 변수의 추세나 변동 확인하자!\n",
+    "# 전체 예측할 변수의 추세나 변동 확인\n",
     "\n",
     "plt.figure(figsize=(27,10))\n",
     "plt.plot(df_agg.Date2, df_agg.Weekly_Sales)\n",
@@ -825,7 +825,7 @@
     }
    ],
    "source": [
-    "#decomp 간단하게 분해하기!\n",
+    "# decomp 간단하게 분해\n",
     "timeseries_decomp = df_agg.loc[:, ['Date2','Weekly_Sales']]\n",
     "timeseries_decomp.index = timeseries_decomp.Date2\n",
     "ts_decomp = timeseries_decomp.drop('Date2',axis=1)\n",
@@ -876,7 +876,7 @@
    "id": "e3261e02",
    "metadata": {},
    "source": [
-    "## ACF, PACF 함수 그래프 그리기!"
+    "## ACF, PACF 함수 그래프 그리기"
    ]
   },
   {
@@ -911,7 +911,7 @@
    "metadata": {},
    "source": [
     "- 1주전의 영향이 있는 것으로 보인다.\n",
-    "- 연말에 그래프에 나온 것처럼 영향력이 있다는 것을 확인!"
+    "- 연말에 그래프에 나온 것처럼 영향력이 있다는 것을 확인"
    ]
   },
   {
@@ -920,7 +920,7 @@
    "metadata": {},
    "source": [
     "# 1. 회귀분석을 통한 예측\n",
-    "- 회귀분석을 통한 다항회귀 개념의 예측이기 때문에 변수를 여러 개 사용 가능하다!"
+    "- 회귀분석을 통한 다항회귀 개념의 예측이기 때문에 변수를 여러 개 사용 가능"
    ]
   },
   {
@@ -938,7 +938,7 @@
     "df_agg['Weekly_Sales_52w']=df_agg['Weekly_Sales'].shift(52)\n",
     "\n",
     "\n",
-    "#모델의 학습을 하기 위해서 데이터 기간을 설정!\n",
+    "#모델의 학습을 하기 위해서 데이터 기간을 설정\n",
     "\n",
     "df_agg[df_agg['Date2'].isin(pd.date_range('2011-02-05', '2012-10-26'))]\n",
     "\n",
@@ -948,11 +948,11 @@
     "df_y = df_agg[['Weekly_Sales']]\n",
     "\n",
     "# 테스트 데이터 트레인데이터 분리\n",
-    "df_x =df_x.fillna(0) # na값들을 0으로 인식하여 문제 발생!\n",
+    "df_x =df_x.fillna(0) # na값들을 0으로 인식하여 문제 발생\n",
     "x_train, x_test, y_train, y_test = train_test_split(\n",
     "df_x, df_y, test_size=0.6, random_state=1)\n",
-    "# 시계열이지만 -> 쉐어를 진행했다. 회귀분석으로 진행을 하다보니!\n",
-    "# year, date 날렸다. 그냥 회귀분석의 개념으로 시계열 값은 날리고 예측을 진행\n"
+    "# 시계열이지만 -> share를 진행했다. 회귀분석으로 진행을 하다보니\n",
+    "# year, date를 버리고 그냥 회귀분석의 개념으로 시계열 값은 버리고 예측을 진행\n"
    ]
   },
   {
@@ -1238,8 +1238,8 @@
    "id": "1ac4ae52",
    "metadata": {},
    "source": [
-    "- 시계열의 정상성에 여부를 판단하기 위해서 ADF를 진행!\n",
-    "- 귀무가설을 기각 못하면 -> 차분, 지연, 로그 등등 으로 추가적인 방법으로 정상시계열을 만들어야 한다!"
+    "- 시계열의 정상성에 여부를 판단하기 위해서 ADF를 진행\n",
+    "- 귀무가설을 기각 못하면 -> 차분, 지연, 로그 등등 으로 추가적인 방법으로 정상시계열을 만들어야 한다"
    ]
   },
   {
@@ -1249,7 +1249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Arima를 위한 학습셋, 테스트셋 나누기!\n",
+    "# Arima를 위한 학습셋, 테스트셋 나누기\n",
     "\n",
     "train = ts_decomp.loc['2010-02-05':'2012-09-21']\n",
     "test = ts_decomp.loc['2012-09-28':'2012-10-26']"
@@ -1455,7 +1455,7 @@
    "source": [
     "# ARIMA를 사용하기 위해!\n",
     "\n",
-    "# p,d,q 값을 파라미터 설정해야 한다!\n",
+    "# p,d,q 값을 파라미터 설정해야 한다\n",
     "p,d,q = 2,0,2\n",
     "\n",
     "model_arima = ARIMA(train['Weekly_Sales'], order=(p,d,q))\n",
@@ -1612,14 +1612,6 @@
     "# 모델의 적합성 시각화\n",
     "auto_arima_model.plot_diagnostics(figsize=(20,7))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66184ecf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
