--- a/240121_정규표현식.ipynb
+++ b/240121_정규표현식.ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "source": [
     "## 정규표현식\n",
-    "- 문자열 처리할 때 나만의 패턴이나, 분석가의 다양한 사례에서 요구하는 조건의 패턴을 만들어서 처리하는 방법!\n",
-    "- 그 방법을 정규표현식을 이용해서 대부분 처리한다!\n",
+    "- 문자열 처리할 때 나만의 패턴이나, 분석가의 다양한 사례에서 요구하는 조건의 패턴을 만들어서 처리하는 방법\n",
+    "- 그 방법을 정규표현식을 이용해서 대부분 처리한다\n",
     "\n",
-    "- split, strip, 배웠던 문자열 문법들이 정규표현식과 만나면 정말 다양하게 응용할 수 있습니다!\n",
-    "- 이메일주소찾기, 아이디,비번 패턴찾기, 회원가입 아이디 패턴 등 이런 다양한 패턴들을 만들 수 있다!"
+    "- split, strip, 배웠던 문자열 문법들이 정규표현식과 만나면 정말 다양하게 응용할 수 있습니다\n",
+    "- 이메일주소찾기, 아이디,비번 패턴찾기, 회원가입 아이디 패턴 등 이런 다양한 패턴들을 만들 수 있다"
    ]
   },
   {
@@ -42,10 +42,10 @@
     }
    ],
    "source": [
-    "# 패턴 찾는 방법!\n",
+    "# 패턴 찾는 방법\n",
     "\n",
     "re.match('Hello', 'Hello, world!')\n",
-    "# 내가원하는 패턴인 Hello 찾아서 -> 해당 인덱스 출력!"
+    "# 내가원하는 패턴인 Hello 찾아서 -> 해당 인덱스 출력"
    ]
   },
   {
@@ -67,7 +67,7 @@
    ],
    "source": [
     "re.search('Hello', 'Hello, world!')\n",
-    "# 내가원하는 패턴인 Hello 찾아서 -> 해당 인덱스 출력!"
+    "# 내가원하는 패턴인 Hello 찾아서 -> 해당 인덱스 출력"
    ]
   },
   {
@@ -116,7 +116,7 @@
     "- 자음 모음 [ㄱ-ㅎ] [ㅏ-ㅣ]\n",
     "\n",
     "- ^ not 표현으로 제외하고 전부다 라는 것\n",
-    "- '+', '*' 0개 이상 또는 1개 이상의 패턴을 모두 찾는 것!"
+    "- '+', '*' 0개 이상 또는 1개 이상의 패턴을 모두 찾는 것"
    ]
   },
   {
@@ -137,7 +137,7 @@
     }
    ],
    "source": [
-    "# 숫자 패턴만 찾아보자!\n",
+    "# 숫자 패턴만 확인\n",
     "\n",
     "re.search('[0-9]','1231243134123,asdfasdf!@3121')"
    ]
@@ -160,7 +160,7 @@
     }
    ],
    "source": [
-    "re.search('[0-9]+','1231243134123,asdfasdf!@3121') # 정규표현식을 이용해서 다양한 문자열 내에서 내가 원하는 문자 패턴을 찾을 수 있다!"
+    "re.search('[0-9]+','1231243134123,asdfasdf!@3121') # 정규표현식을 이용해서 다양한 문자열 내에서 내가 원하는 문자 패턴을 찾을 수 있다"
    ]
   },
   {
@@ -189,8 +189,8 @@
    "id": "e71ac414",
    "metadata": {},
    "source": [
-    "- {} 숫자를 넣으면 해당 패턴의 문자를 몇 개 찾아달라!\n",
-    "- e.g {3} 3개의 패턴을 찾아라!\n",
+    "- {} 숫자를 넣으면 해당 패턴의 문자를 몇 개 찾음\n",
+    "- e.g {3} 3개의 패턴을 찾기\n",
     "\n",
     "- 010-0000-0000 "
    ]
@@ -213,7 +213,7 @@
     }
    ],
    "source": [
-    "# 휴대전화번호 패턴 찾기!\n",
+    "# 휴대전화번호 패턴 찾기\n",
     "re.match('[0-9]{3}-[0-9]{4}-[0-9]{4}','010-1234-5678')"
    ]
   },
@@ -222,7 +222,7 @@
    "id": "cd60557c",
    "metadata": {},
    "source": [
-    "- 정규표현식을 여러 개 합쳐서 사용 가능하다!"
+    "- 정규표현식을 여러 개 합쳐서 사용 가능하다"
    ]
   },
   {
@@ -285,7 +285,7 @@
    "id": "3f6c6f60",
    "metadata": {},
    "source": [
-    "### 정규표현식도 그룹으로 사용 가능하다!"
+    "### 정규표현식도 그룹으로 사용 가능"
    ]
   },
   {
@@ -367,7 +367,7 @@
    "id": "1f28ec2e",
    "metadata": {},
    "source": [
-    "## 실제 예제 데이터를 가지고 정규표현식 및 텍스트 분석을 진행해 보자!"
+    "## 실제 예제 데이터를 가지고 정규표현식 및 텍스트 분석을 진행"
    ]
   },
   {
@@ -544,10 +544,10 @@
    "id": "23575d2c",
    "metadata": {},
    "source": [
-    "## pandas 에서 제공하는 str 문법!\n",
-    "- 기존 python 문자열 다루는 문법과 같이 응용해서 사용하면 된다!\n",
+    "## pandas 에서 제공하는 str 문법\n",
+    "- 기존 python 문자열 다루는 문법과 같이 응용해서 사용\n",
     "\n",
-    "    - 시리즈 데이터형태.str.내가 원하는 문법들"
+    "    - 시리즈 데이터형태.str.원하는 문법들"
    ]
   },
   {
@@ -588,7 +588,7 @@
    "id": "543c117d",
    "metadata": {},
    "source": [
-    "- pad 길이 맞추거나, 0패딩 맞출 때 하는 문법!"
+    "- pad 길이 맞추거나, 0패딩 맞출 때 사용하는 문법"
    ]
   },
   {
@@ -686,7 +686,7 @@
     }
    ],
    "source": [
-    "df['document'].str.zfill(width=30) #0값을 패딩 길이에 맞춰서 채워준다!"
+    "df['document'].str.zfill(width=30) #0값을 패딩 길이에 맞춰서 채워줌"
    ]
   },
   {
@@ -694,7 +694,7 @@
    "id": "90849790",
    "metadata": {},
    "source": [
-    "### split() : 문자열 나누기!"
+    "### split() : 문자열 나누기"
    ]
   },
   {
@@ -982,12 +982,12 @@
     "- lower- 소문자 변경\n",
     "- upper- 대문자 변경\n",
     "- capitailize - 앞문자 대문자로 변경\n",
-    "- title - 단위별 앞문자 대문자로 변경하기\n",
-    "- swapcase - 소문자는 대문자, 대문자는 소문자로 변경하기!\n",
+    "- title - 단위별 앞문자 대문자로 변경\n",
+    "- swapcase - 소문자는 대문자, 대문자는 소문자로 변경\n",
     "\n",
     "### 필수과제1\n",
-    "- 영문데이터를 가지고 실제 대소문자를 바꿔보는 str문법 적용하기!\n",
-    "- 그 외에 split, 아래에 배우는 find 등 다양한 문법에도 응용!"
+    "- 영문데이터를 가지고 실제 대소문자를 바꿔보는 str문법 적용\n",
+    "- 그 외에 split, 아래에 배우는 find 등 다양한 문법에도 응용"
    ]
   },
   {
@@ -1087,7 +1087,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#정규표현식을 같이 이용하면\n",
+    "#정규표현식을 같이 이용\n",
     "df['findall_docu']=df['document'].str.findall(pat='[재미]') # 다양한 정규표현식을 뺄 수 있다"
    ]
   },
@@ -1098,7 +1098,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#findall 정규표현식과 응용해서 전처리가 가능하다!\n",
+    "#findall 정규표현식과 응용해서 전처리가 가능\n",
     "df['findall_num']=df['document'].str.findall(pat='[0-9]+')"
    ]
   },
@@ -1110,7 +1110,7 @@
     "- slice\n",
     "- 특정 인덱스의 값을 잘라낸다! 반환할 수 있다.\n",
     "- slice_replace\n",
-    "- 해당 사이의 인덱스값을 다른 값을 바꾼다!"
+    "- 해당 사이의 인덱스값을 다른 값으로 바꿈"
    ]
   },
   {
@@ -1142,7 +1142,6 @@
     }
    ],
    "source": [
-    "\n",
     "df['document'].str.slice_replace(start=0, stop=4, repl='!') # 0부터 4까지의 전체 데이터를 날려서 삭제 "
    ]
   },
@@ -1476,7 +1475,7 @@
    "id": "64e5399c",
    "metadata": {},
    "source": [
-    "- len() 함수 이용해서도 전처리 가능하다!"
+    "- len() 함수 이용해서도 전처리 가능"
    ]
   },
   {
@@ -1723,18 +1722,6 @@
    ],
    "source": [
     "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c7476ddb",
-   "metadata": {},
-   "source": [
-    "### 필수과제2\n",
-    "- 1. label의 따라서 긍정, 부정일텐데 긍정의 리뷰와 부정의 리뷰에 가장 많은 빈도 단어들은 어떤 것이 있는지? 만들어 주세요!\n",
-    "- 문자열 split 리스트에 넣어서 해도 되고 확인해 주세요!\n",
-    "\n",
-    "- 2. 리뷰의 길이에 따른 긍정과 부정, 가장 많은 빈도의 단어는 어떤 것이 있는지 확인해 주세요!"
    ]
   },
   {
