--- a/240204_CountVectorize.ipynb
+++ b/240204_CountVectorize.ipynb
@@ -122,7 +122,7 @@
    "source": [
     "## CountVectorize \n",
     "- bow 카운트 기반으로 (카운팅을 하여서 전처리를 진행하는 것)\n",
-    "- 학습하기 위해서 어떤 식으로 벡터를 만들어야 하는지?"
+    "- 학습하기 위해서 어떤 식으로 벡터를 만들어야 하는지 확인"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "re_cv = CountVectorizer(max_features=1000) # 1000개의 피처만 가지고 오겠다."
+    "re_cv = CountVectorizer(max_features=1000) # 1000개의 피처만 가지고 옴"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 리뷰 데이터를 이 안에 넣어보자! ( 전처리를 하고 진행해야 하지만 시간관계상 그대로 넣는 것) 여러분들은 추후 더 좋은 성능을 위해서는 전처리 작업 필수!\n",
+    "# 리뷰 데이터를 이 안에 넣어봄, 추후 더 좋은 성능을 위해서는 전처리 작업 필수\n",
     "\n",
     "re_dtm =re_cv.fit_transform(df_docu_sp2)"
    ]
@@ -222,7 +222,7 @@
    "source": [
     "### 행은 15만개, 열은 1,000개 제한 (1000개의 컬럼은 카운트기반으로 가장많이 나온 것으로 선정)\n",
     "\n",
-    "- Sparse 0이 얼마나 많은지에 대한 값들도 확인할 수 있다!"
+    "- Sparse 0이 얼마나 많은지에 대한 값들도 확인할 수 있음"
    ]
   },
   {
@@ -283,7 +283,7 @@
    "id": "33bdc841",
    "metadata": {},
    "source": [
-    "### okt를 이용해서 동사, 명사만 추출해 보자!"
+    "### okt를 이용해서 동사, 명사만 추출"
    ]
   },
   {
@@ -335,8 +335,8 @@
    "id": "5b2e646a",
    "metadata": {},
    "source": [
-    "## 전체 데이터에 적용해야 하니깐 위에는 1개 샘플만 가지고 진행한 것\n",
-    "- 함수를 하나 만들고 전체 데이터셋을 다 전처리 진행해야 한다!"
+    "## 전체 데이터에 적용해야 하니깐 위에는 1개 샘플만 가지고 진행\n",
+    "- 함수를 하나 만들고 전체 데이터셋을 다 전처리 진행"
    ]
   },
   {
@@ -371,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#사용할 토큰을 지정 가능하다.\n",
+    "#사용할 토큰을 지정 가능\n",
     "re_cv = CountVectorizer(max_features=1000, tokenizer = my_tokenizer )"
    ]
   },
@@ -409,7 +409,7 @@
     }
    ],
    "source": [
-    "#어떤 식으로 카운팅 기반으로 되어 있는지 확인해 보자!\n",
+    "#어떤 식으로 카운팅 기반으로 되어 있는지 확인\n",
     "for word, count in zip(re_cv.get_feature_names_out(), re_dtm[1].toarray()[0]):\n",
     "    if count>0:\n",
     "        print(word,count,end=',')"
@@ -429,7 +429,7 @@
    "id": "c1c520d5",
    "metadata": {},
    "source": [
-    "## 간단하게 Cosine_Similarity 를 확인하자!"
+    "## 간단하게 Cosine_Similarity 를 확인"
    ]
   },
   {
@@ -441,7 +441,7 @@
    "source": [
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
-    "# 기준으로 볼 리뷰를 하나 가지고 오기!\n",
+    "# 기준으로 볼 리뷰를 하나 가져옴\n",
     "st = len(df_docu_sp2[0])//2\n",
     "\n",
     "# 중심점으로부터 뒤 절반을 가지고 와서 비교할 문서를 생성\n",
@@ -518,7 +518,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#코사인 유사도를 게산하기 위해 벡터로 변환해야 한다\n",
+    "#코사인 유사도를 게산하기 위해 벡터로 변환\n",
     "source_rv=re_cv.transform([source])"
    ]
   },
@@ -654,7 +654,7 @@
     }
    ],
    "source": [
-    "#리뷰가 어떤 리뷰인지 유사한 리뷰가 무엇인지 확인을 해야 한다!\n",
+    "#리뷰가 어떤 리뷰인지 유사한 리뷰가 무엇인지 확인\n",
     "print('가장 유사한 리뷰는 무엇인지?',np.argmax(sim_res[0]))"
    ]
   },
@@ -723,7 +723,7 @@
    "id": "69a2a046",
    "metadata": {},
    "source": [
-    "### 카운트기반으로 하는 게 문제가 많다.\n",
+    "### 카운트기반으로 하는 게 문제가 많음\n",
     "- 단어가 더 많다고 해서 꼭 중요한 건 아닐 수 있다.\n",
     "- 이런 의미를 좀 반영해서 전처리 하는 방법이 TF-IDF(Term Frequency - Inverse Document Frequency) \n",
     "- 단어빈도 - 역문서빈도\n",
@@ -857,7 +857,8 @@
     }
    ],
    "source": [
-    "re_dtm[10].toarray()[0] #맨처음 만든 re_dtm의 배열이 어떤식으로 되어있는지 확인이 가능하다! #카운트 기반은 대부분 0 1,2 정수 "
+    "re_dtm[10].toarray()[0] #맨처음 만든 re_dtm의 배열이 어떤식으로 되어있는지 확인이 가능\n",
+    "#카운트 기반은 대부분 0 1,2 정수"
    ]
   },
   {
@@ -1077,7 +1078,7 @@
     }
    ],
    "source": [
-    "rv_tfidf[0].toarray()[0] # tf_idf 카운팅이 아닌 확률처럼 소수로 되어있다. 빈도기반이라"
+    "rv_tfidf[0].toarray()[0] # tf_idf 카운팅이 아닌 확률처럼 소수로 되어있음. (빈도기반)"
    ]
   },
   {
@@ -1222,7 +1223,7 @@
    "id": "a4ffc7cb",
    "metadata": {},
    "source": [
-    "### 두 가지 방법으로 문자열 데이터를 전처리하고, 벡터로 만들어서 코사인 유사도를 계산하였다.\n",
+    "### 두 가지 방법으로 문자열 데이터를 전처리하고, 벡터로 만들어서 코사인 유사도를 계산\n",
     "- ml 분류, 감성분석 등을 진행하게 되면 이 부분도 결국에는 동일하게 벡터화로 만들어서 학습을 시켜야 된다."
    ]
   },
@@ -1379,29 +1380,6 @@
    ],
    "source": [
     "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "52b3176b",
-   "metadata": {},
-   "source": [
-    "## 필수과제1\n",
-    "- 1번 리뷰로 진행했는데, 원하시는 다른 리뷰로 진행해서 실제 두 개의 방법으로 진행했을 때 유사도가 어떻게 나오는지 확인해 주시면 좋을 것 같습니다.\n",
-    "- 차이가 어떤 식으로 발생하는지 확인하면 좋을 것 같습니다.\n",
-    "\n",
-    "## 필수과제2\n",
-    "- 더 좋은 차이를 만드는 법은\n",
-    "- 베이스로 아무것도 하지 않고 그냥 카운팅해서 진행한 것과\n",
-    "- 불용어 처리, 기타 전처리 등을 진행하고 더 깔끔하게 리뷰 전처리 후에 진행하고 두 개를 비교해 주세요! \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "82b55b99",
-   "metadata": {},
-   "source": [
-    "- word2vec 정도의 추론기반으로 자연어 처리, 학습하는 것도 관심있으시면 같이 봐도 좋을 것 같습니다."
    ]
   },
   {
