--- a/240225_데이터 구간화.ipynb
+++ b/240225_데이터 구간화.ipynb
@@ -138,7 +138,7 @@
    "outputs": [],
    "source": [
     "# 단순 구간화\n",
-    "# BMI 지수에 대한 도메인이 없지만 예시로 만들어 보자!\n",
+    "# BMI 지수에 대한 도메인이 없지만 예시로 만들기\n",
     "\n",
     "df1 =df.copy()"
    ]
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "#도메인은 분석가가 직접 정하면 되는 것\n",
-    "# 예시로 학교 성적이라고 생각하면 쉽게 이해가 될 것!\n",
+    "# 예시로 학교 성적이라고 생각하면 쉽게 이해가 됨\n",
     "df1.loc[df1['BMI'] <=20, 'BMI_bin']='a'\n",
     "df1.loc[(df1['BMI'] >20) & (df1['BMI'] <=30), 'BMI_bin']='b'\n",
     "df1.loc[(df1['BMI'] >30) & (df1['BMI'] <=40), 'BMI_bin']='c'\n",
@@ -199,7 +199,7 @@
     }
    ],
    "source": [
-    "#연속형인 값을\n",
+    "#연속형인 값\n",
     "df.BMI"
    ]
   },
@@ -229,7 +229,7 @@
     }
    ],
    "source": [
-    "#범주형으로 만들면서 진행하였다.\n",
+    "#범주형으로 만들면서 진행\n",
     "df1.BMI_bin.value_counts()"
    ]
   },
@@ -273,8 +273,7 @@
    "source": [
     "#pandas 에서 제공하는 cut 함수 이용해서 가능\n",
     "\n",
-    "df1.insert(3,'BMI_bis4',0)\n",
-    "\n"
+    "df1.insert(3,'BMI_bis4',0)"
    ]
   },
   {
@@ -437,7 +436,7 @@
     "## Feature_selection 의 영역\n",
     "\n",
     "- 구간화 등의 범주형 변수로 만들었을 때 이진으로 만든 경우도 있고 여러 개의 피처들을 만들었음\n",
-    "- 어떤 피처를 그럼 사용해야 하는가?\n",
+    "- 어떤 피처를 그럼 사용해야 하는지\n",
     "\n",
     "- WOE(Weight of Evidence) , IV(Information Value)\n",
     "- 변수의 정보량과 예측력을 평가하는데 사용하는 지표 \n",
@@ -449,7 +448,7 @@
     "\n",
     "\n",
     "---\n",
-    "- 해당 수치가 나왔을 때 해석하는 방법?\n",
+    "- 해당 수치가 나왔을 때 해석하는 방법\n",
     "- WOE 양수 : 구간 값들이 양성클래스의 발생이 더 관련이 있다.\n",
     "- WOE 음수 : 구간 값들이 음성 클래스의 발생에 더 관련이 있다.\n",
     "- WOE 값이 큰 양수 또는 큰 음수 : 해당 구간 값이 예측값과 강한 관계를 가지고 있다.\n",
@@ -494,7 +493,7 @@
     "tt=tt[['survived','sex','age']]\n",
     "tt = tt.dropna()\n",
     "\n",
-    "tt_ss=pd.get_dummies(tt['sex']) #성별 변수를 하나 만든다! onehot"
+    "tt_ss=pd.get_dummies(tt['sex']) #성별 변수를 하나 만든다"
    ]
   },
   {
@@ -1216,7 +1215,7 @@
    "id": "9aa51701",
    "metadata": {},
    "source": [
-    "- bin 몇 개가 적정합니까?\n",
+    "- bin 몇 개가 적정한지\n",
     "- 5~10, 15 적정 수준으로 보는데 데이터에 특성이나 도메인 지식에 따라서는 달라질 순 있다.\n",
     "- 적정한 수는 결국 모델링도 같이 진행하면서 최적을 찾아가야 하는 것"
    ]
@@ -1324,7 +1323,7 @@
    "id": "cece1841",
    "metadata": {},
    "source": [
-    "- 타이타닉데이터를 실제 패키지에 넣어보자!"
+    "- 타이타닉데이터를 실제 패키지에 넣어서 확인"
    ]
   },
   {
