--- a/240303_정규분포화.ipynb
+++ b/240303_정규분포화.ipynb
@@ -460,7 +460,7 @@
    "id": "8ba43cc5",
    "metadata": {},
    "source": [
-    "# bike_sharing_daily 로 전처리 적용해 보기!"
+    "# bike_sharing_daily 로 전처리 적용"
    ]
   },
   {
@@ -1157,8 +1157,8 @@
    "id": "6321405e",
    "metadata": {},
    "source": [
-    "- casual변수가 정규분포인가?\n",
-    "- qqplot 그려보고, shapiro 검정 진행해 보기!"
+    "- casual변수가 정규분포인지\n",
+    "- qqplot 그려보고, shapiro 검정 진행"
    ]
   },
   {
@@ -3271,26 +3271,6 @@
    ],
    "source": [
     "summary"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b077ab7d",
-   "metadata": {},
-   "source": [
-    "## 필수과제1\n",
-    "- 정규분포와 비슷한 컬럼을 추가하여 \n",
-    "- 기존 데이터 df casual, cnt ,[정규분포와 비슷한 추가컬럼] 을 통해서 - r2, rmse, 확인해 주세요.\n",
-    "- 정규분포와 비슷하지 않은 컬럼 추가하여\n",
-    "- 기존 데이터 df casual, cnt ,[정규분포와 비슷하지 않은 추가컬럼] 을 통해서 - r2, rmse, 확인해 주세요.\n",
-    "----\n",
-    "## 필수과제2\n",
-    "- 정규분포와 비슷하지 않은 컬럼 추가하여\n",
-    "- 기존 데이터 df casual, cnt ,[정규분포와 비슷하지 않은 추가컬럼을 box-cox 등으로 변환] 을 통해서 - r2, rmse, 확인해 주세요.\n",
-    "- 해당 컬럼을 box-cox, yeo-johnson을 통해 변환하고 실제 값을 계산해 주세요.\n",
-    "\n",
-    "## 우리가 확인하고 싶은 것은?\n",
-    "- 정규분포를 가정하는 모델에서 변수를 정규분포화로 만들어준다면 실제 모델의 성능이 올라가는지의 유무를 확인하는 것!"
    ]
   },
   {
