--- a/240310_데이터분석 프로세스.ipynb
+++ b/240310_데이터분석 프로세스.ipynb
@@ -744,7 +744,7 @@
    "id": "fa0e74d7",
    "metadata": {},
    "source": [
-    "- 수치형 데이터들의 분포를 확인해 보자!"
+    "- 수치형 데이터들의 분포를 확인"
    ]
   },
   {
@@ -909,7 +909,7 @@
     }
    ],
    "source": [
-    "# 날씨랑 count 영향을 줄것이다. 가설-> 해당 피처들이 count 영향을 줄 것이니 중요한 피처라고 볼 수 있지 않을까?\n",
+    "# 날씨랑 count 영향을 줄것이다. 가설-> 해당 피처들이 count 영향을 줄 것이니 중요한 피처라고 볼 수 있는지\n",
     "\n",
     "figure, axes = plt.subplots(nrows=3, ncols=2)\n",
     "plt.tight_layout() # 겹치는 x축들 정리\n",
@@ -1386,13 +1386,13 @@
    "id": "708efbc1",
    "metadata": {},
    "source": [
-    "- 피처들간의 영향도 살펴보자!\n",
+    "- 피처들간의 영향도 확인\n",
     "- 'temp'\n",
     "- 'atemp'\n",
     "- 'windspeed'\n",
     "- 'humidity\n",
     "\n",
-    "- 산점도를 통한 y값의 관계를 살펴보자!"
+    "- 산점도를 통한 y값의 관계 확인"
    ]
   },
   {
@@ -2044,7 +2044,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mse 를 확인하자!\n",
+    "# mse 를 확인\n",
     "\n",
     "mse_train=mean_squared_error(y_true = y_train, y_pred=ln_reg_model.predict(X_train))\n",
     "mse_test=mean_squared_error(y_true = y_test, y_pred=ln_reg_model.predict(X_test))"
@@ -2068,25 +2068,6 @@
    "source": [
     "print(mse_train)\n",
     "print(mse_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "504cfc84",
-   "metadata": {},
-   "source": [
-    "### 필수과제1 - weekday 꼭 넣어보기!!\n",
-    "\n",
-    "### 필수과제2 - target 값 로그스케일링 꼭 진행하기!\n",
-    "- 타깃값을 log 스케일링 진행\n",
-    "\n",
-    "### 필수과제3- x feature 스케일링 진행\n",
-    "- 기존에 스케일링 진행하지 않은 피처들 스케일링\n",
-    "\n",
-    "### 필수과제4 - base mse 보다 값을 낮추는 것 목표!\n",
-    "- 피처를 추가했을 때 더 낮아지는 확인( weekday ) \n",
-    "- 본인이 직접 파생변수를 만들고 싶다면 가능합니다. \n",
-    "- 요일이나 시간적인 부분에 파생변수를 추가로 만들고 싶다? 있으면 언제든 만들어서 테스트해도 된다!"
    ]
   },
   {
