--- a/240317_연관규칙 알고리즘.ipynb
+++ b/240317_연관규칙 알고리즘.ipynb
@@ -4663,7 +4663,6 @@
     "### Auto-ML\n",
     "- 머신러닝 자동 학습하는 모델링 패키지\n",
     "- 알아서 학습하고, 최적의 하이퍼파라미터 파이프라인을 공유한다.\n",
-    "- 이런 식으로 자동화로 나온 패키지가 있구나, 실제 사용하면 이런 식으로 진행되는구나!\n",
     "\n",
     "- 분류관련 tpot 모델 진행\n",
     "- 회귀모델도 있다."
@@ -5667,7 +5666,7 @@
     }
    ],
    "source": [
-    "tpot.fitted_pipeline_ # 가장 좋은 성능의 모델은 어떤 것인가?"
+    "tpot.fitted_pipeline_ # 가장 좋은 성능의 모델은 어떤 것인지"
    ]
   },
   {
