--- a/230924_mpg column.ipynb
+++ b/230924_mpg column.ipynb
@@ -254,13 +254,13 @@
     "## 기존에 배웠던 \n",
     "- 평균대치\n",
     "- 선형보간\n",
-    "- sklearn iterative imputer를 사용해서 실제 결측값을 대체하고\n",
-    "- 해당 결측값을 대체한 것을 회귀분석을 통해 mse 차이가 어떤 식으로 나오는지 비교하려고 합니다.\n",
-    "- mse 오차에 대한 개념 예측한 값과 실제 값의 차이 \n",
+    "- sklearn iterative imputer를 사용해서 실제 결측값을 대체 후\n",
+    "- 해당 결측값을 대체한 것을 회귀분석을 통해 mse 차이가 어떤 식으로 나오는지 비교\n",
+    "- mse 오차에 대한 개념 예측한 값과 실제 값의 차이\n",
     "\n",
     "\n",
-    "- 선형보간의 경우는 결국 interpolation 기존에 데이터를 보고 결측을 메꾸는 방식인데\n",
-    "- 해당 방식이 과연 정말 데이터의 올바른 결측치 대체 방법인지? "
+    "- 선형보간의 경우는 결국 interpolation 기존에 데이터를 보고 결측을 메꾸는 방식\n",
+    "- 해당 방식이 과연 정말 데이터의 올바른 결측치 대체 방법인지 확인"
    ]
   },
   {
@@ -320,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 결측치를 임의로 만들어야 하는 상황\n",
+    "## 결측치를 임의로 만듬\n",
     "msv=np.random.randint(0,389, size=30) # np size "
    ]
   },
@@ -369,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sp =pd.concat([df_x ,df['mpg']],axis=1) # 결측치 만들고 y값과 붙이기 \n",
+    "df_sp =pd.concat([df_x ,df['mpg']],axis=1) # 결측치 만들고 y값과 붙이기\n",
     "df_sp1 =pd.concat([df_x ,df['mpg']],axis=1)\n",
     "df_sp2 =pd.concat([df_x ,df['mpg']],axis=1)\n",
     "df_sp3 =pd.concat([df_x ,df['mpg']],axis=1)"
@@ -584,7 +584,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_train1 = fit_train1.fit() # 회귀분석 Fit 모델만들고 "
+    "fit_train1 = fit_train1.fit() # 회귀분석 Fit 모델만들기"
    ]
   },
   {
@@ -605,7 +605,7 @@
     }
    ],
    "source": [
-    "# 실제 예측을 해보자!\n",
+    "# 실제 예측\n",
     "plt.plot(np.array(fit_train1.predict(x_test)),label='pred')\n",
     "plt.plot(np.array(y_test), label='True')\n",
     "plt.legend()\n",
@@ -630,7 +630,7 @@
     "from sklearn.metrics import mean_squared_error\n",
     "mse1 = mean_squared_error(y_true = y_test, y_pred = fit_train1.predict(x_test))\n",
     "print(mse1)\n",
-    "# 평균을 가지고 대체해서 나온 회귀식 예측결과 실제값과 예측값의 mse 54.37 정도가 나왔다."
+    "# 평균을 가지고 대체해서 나온 회귀식 예측결과 실제값과 예측값의 mse 54.37 정도가 나옴"
    ]
   },
   {
@@ -638,7 +638,7 @@
    "id": "2f05bbc1",
    "metadata": {},
    "source": [
-    "## 보간법을 이용해서 진행해보자!\n",
+    "## 보간법을 이용하여 진행\n",
     "- 선형보간법"
    ]
   },
@@ -720,7 +720,7 @@
     }
    ],
    "source": [
-    "# 실제 예측을 해보자!\n",
+    "# 실제 예측\n",
     "plt.plot(np.array(fit_train2.predict(x_test)),label='pred')\n",
     "plt.plot(np.array(y_test), label='True')\n",
     "plt.legend()\n",
@@ -755,9 +755,7 @@
    "source": [
     "### sklearn 패키지 중\n",
     "- iterativeImputer\n",
-    "- 하이퍼 파라미터들이 정말 다양합니다.\n",
-    "- 모델링 거기에 있는 대부분의 모든 하이퍼파라미터를 다 배우는데 \n",
-    "- sklearn 홈페이지에 보면 다 잘 나와있다."
+    "- sklearn 홈페이지에서 다른 하이퍼파라미터 참고"
    ]
   },
   {
@@ -807,7 +805,7 @@
     }
    ],
    "source": [
-    "# 반환값이 array 만들어진다.\n",
+    "# 반환값이 array 만들어짐\n",
     "df_sp3"
    ]
   },
@@ -1072,7 +1070,7 @@
     }
    ],
    "source": [
-    "# 실제 예측을 해보자!\n",
+    "# 실제 예측\n",
     "plt.plot(np.array(fit_train3.predict(x_test)),label='pred')\n",
     "plt.plot(np.array(y_test), label='True')\n",
     "plt.legend()\n",
@@ -1118,7 +1116,7 @@
     }
    ],
    "source": [
-    "## 결측치를 어떤 방법이 가장 좋은 방법일까요?\n",
+    "## 결측치를 대체하는 가장 좋은 방법 확인\n",
     "print(mse1, '단순평균대치법')\n",
     "print(mse2, '선형보간법')\n",
     "print(mse3, 'iterative imputer')"
@@ -1129,28 +1127,25 @@
    "id": "d371aabd",
    "metadata": {},
    "source": [
-    "### 이 지표를 가지고 어떤 식으로 해석해야 하고\n",
-    "- 모든 데이터를 이런 식으로 sklearn 대치만 하면 최고인가?\n",
-    "- 단순하게 평균이나 선형보간이나 iterative 어떤 게 가장 좋다라고는 말할 수 업삳.\n",
-    "- 데이터의 관계나 데이터의 분포나, 더 나아가서는 앞단의 데이터에 대한 도메인 지식이 필수적으로 있어야 한다.\n",
+    "### 이 지표를 가지고 해석\n",
+    "- 모든 데이터를 이런 식으로 sklearn 대치만 하면 좋은지\n",
+    "- 단순하게 평균이나 선형보간이나 iterative 어떤 게 가장 좋다라고는 말할 수 없음\n",
+    "- 데이터의 관계나 데이터의 분포나, 더 나아가서는 앞단의 데이터에 대한 도메인 지식이 필수적으로 있어야 함\n",
     "\n",
-    "- 1.데이터 분석가가 도메인 지식없이 단순하게 수치로만 싸우게되면 결국 이런 수치만 보고 판단해서 가장 낮은 수치만을 좇고 또 한쪽으로만 치우치는 경향\n",
-    "- 2.데이터 분석가가 해석을 할 수 없다. 설득을 할 수 없다.\n",
-    "- 3. why?\n",
+    "- 1.데이터 분석가가 도메인 지식없이 단순하게 수치로만 싸우게되면 결국 이런 수치만 보고 판단해서 가장 낮은 수치만을 좇고 또 한쪽으로만 치우치는 경향이 생김\n",
+    "- 2.데이터 분석가가 해석을 할 수 없으면 안됨\n",
     "\n",
-    "\n",
-    "- why를 어떤 식으로 설명해야 하는가?\n",
-    "- 기존의 데이터의 분포와 데이터의 관계를 잘 이해하고 있어야 한다.\n",
+    "- 기존의 데이터의 분포와 데이터의 관계를 잘 이해하고 있어야 함\n",
     "\n",
     "- 결측치를 대체하는 방법 자체가 위의 방법대로 진행을 한다면\n",
-    "- 해당 방법에 대한 로직은 정확히 이해를 해야 한다. \n",
-    "- 무엇보다 중요한 건 결국 현재 데이터 분포에 대해서 정확히 이해를 하고 \n",
-    "- 평균으로만 대체하는 것이 오히려 로직상으로 맞을 수도 있다. 서베이 데이터라고 하는데 무응답 데이터 같은 경우는 다른 데이터와 관계로 대체하는 게 아니라 무응답이기 때문에 그냥 0으로만 대체한다 도메인 로직을 알고 있어야 한다.\n",
+    "- 해당 방법에 대한 로직은 정확히 이해를 해야함 \n",
+    "- 가장 중요한 건 결국 현재 데이터 분포에 대해서 정확히 이해를 해야함 \n",
+    "- 평균으로만 대체하는 것이 오히려 로직상으로 맞을 수도 있음. 서베이 데이터라고 하는데 무응답 데이터 같은 경우는 다른 데이터와 관계로 대체하는 게 아니라 무응답이기 때문에 그냥 0으로만 대체한다 도메인 로직을 알고 있어야 함.\n",
     "\n",
     "- ## 결측치를 대체할 때\n",
     "- 꼭 도메인에 대한 지식을 가지고 컬럼들 바라보고\n",
     "- 각 컬럼들간의 데이터 분포와 특히 y값에 대한 분포들도 꼭 살펴보면서\n",
-    "- 어떤 결측치 대체 방법을 사용할지 고민하고 선정해야 한다."
+    "- 어떤 결측치 대체 방법을 사용할지 고민하고 선정해야 함"
    ]
   },
   {
@@ -1606,41 +1601,6 @@
    ],
    "source": [
     "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c4ffa627",
-   "metadata": {},
-   "source": [
-    "## 필수과제 1\n",
-    "1. simpleimputer (간단한 개념이라 리서치하시고 실제 코드 작성하시고 값에 대해서 결과 정리까지 부탁드립니다. )\n",
-    "- 다양하게 통계치를 지정할 수 있다. ( 평균, 최빈값이 등등 ) 결과가 어떤식으로 바뀌는지 mpg 데이터를 가지고 확인해 주세요!\n",
-    "\n",
-    "## 필수과제 2\n",
-    "- 시계열데이터는 제가 구글드라이브에 업로드할 예정입니다.\n",
-    "2. 만약 시계열 데이터라면? 추세가 반영될 수 있기 때문에 선형보간이 더 좋은 결과가 나올 수 있다. \n",
-    "- 시계열데이터를 공유할 예정 -> 해당 데이터를 가지고 결측값을 만들고 오늘 배웠던 \n",
-    "- 평균 또는 최빈값등 기초통계량\n",
-    "- 선형보간 등 interpolation\n",
-    "- iterative imputer\n",
-    "\n",
-    "- 시계열데이터는 어떤 식으로 결측값을 대체 했을 때 더 좋은 결과가 나오지는 확인하기!\n",
-    "- 다만 시계열데이터를 결측값을 만들기 전에  기존 데이터의 분포와 관계, 컬럼들에 대한 관계들을 확인해 보시고 ( 간단한 시각화로 )\n",
-    "- 결측치를 만들어서 결과를 비교해 주세요.\n",
-    "\n",
-    "\n",
-    "## 필수과제3\n",
-    "- 최종 결과물은  PDF파일로 정리하여 5장 내로 결과만 정리해서 공유해 주세요!\n",
-    "### 이 과제는 팀끼리 필수과제 제출하셔도 됩니다.\n",
-    "- 개인인 경우는 개인이 과제를 하시고 제출하면 되고\n",
-    "- 팀인 경우는 팀끼리 같이 상의해서 고민하고 하나의 결과물로 다 같이 제출해도 됩니다. 이 결과물은 개인 노션 페이지에도 다 업로드가 되어야 한다.\n",
-    "\n",
-    "### 데드라인\n",
-    "- 복습과제는 요번 코드는 너무 어렵기 때문에 한번 직접 따라하는 정도로만 해주시고\n",
-    "- 필수과제는 2주의 시간 동안 진행하고 10/8까지 필수과제는 제출해 주시면 됩니다.\n",
-    "- 모든 필수과제는 다 따로따로 제출해야 합니다.\n",
-    "- 복습과제는 일주일 기한 넘지 않게 잘 제출해 주세요.\n"
    ]
   }
  ],
