--- a/231126_데이터 시각화, 시계열 데이터.ipynb
+++ b/231126_데이터 시각화, 시계열 데이터.ipynb
@@ -267,7 +267,7 @@
    "id": "6703ee0a",
    "metadata": {},
    "source": [
-    "## 반복문을 이용해서 시각화 그래프 그리기!"
+    "## 반복문을 이용해서 시각화 그래프 그리기"
    ]
   },
   {
@@ -289,16 +289,15 @@
    ],
    "source": [
     "import matplotlib.gridspec as gridspec\n",
-    "grid = gridspec.GridSpec(2,2) # 4가지 그래프를 그리려고 함!\n",
+    "grid = gridspec.GridSpec(2,2) # 4가지 그래프\n",
     "plt.figure(figsize=(16,10))\n",
     "plt.subplots_adjust(wspace= 0.5, hspace=0.4) # 그래프가 여러 개 그려질 경우 충돌 방지\n",
     "\n",
     "mpg_features = ['manufacturer','model','category','drv'] # 범주형 데이터만 가지고 그래프 그리기 문자열 데이터들\n",
     "# sns countplot 그리기!\n",
-    "\n",
     "for idx, feature in enumerate(mpg_features):\n",
     "    ax = plt.subplot(grid[idx])\n",
-    "    #sns 카운트플랏  파라미터들\n",
+    "    #sns 카운트플롯 파라미터들\n",
     "    sns.countplot(x = feature,\n",
     "                 data= df,\n",
     "                 hue = 'drv',\n",
@@ -306,16 +305,6 @@
     "                 ax =ax)\n",
     "    plt.xticks(rotation=90) #x축의 값을 축전환하는 코드\n",
     "    ax.set_title(f'{feature} Distribution')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d74cfe26",
-   "metadata": {},
-   "source": [
-    "### 필수과제 1\n",
-    "- 타이타닉 데이터 연습하기,\n",
-    "- 타이타닉 데이터 3개 이상 컬럼 시각화 진행하기! ( 반복문을 이용하기! )"
    ]
   },
   {
@@ -622,7 +611,7 @@
    "id": "9ba69aa6",
    "metadata": {},
    "source": [
-    "## Seaborn 시각화 그래프들!"
+    "## Seaborn 시각화 그래프"
    ]
   },
   {
@@ -755,7 +744,7 @@
     }
    ],
    "source": [
-    "#count를 x축과 y축을 지정할 수 있고\n",
+    "#count를 x축과 y축을 지정\n",
     "#barplot\n",
     "sns.barplot(x='pclass', y='survived',data=df)"
    ]
@@ -796,7 +785,7 @@
     }
    ],
    "source": [
-    "#count를 x축과 y축을 지정할 수 있고\n",
+    "#count를 x축과 y축을 지정\n",
     "#barplot\n",
     "sns.barplot(x='pclass', y='sex',data=df)\n",
     "# y축이 범주형 변수로 들어가게 되면 반전 되면서 아래 그래프처럼 보이게 된다."
@@ -838,10 +827,10 @@
     }
    ],
    "source": [
-    "#count를 x축과 y축을 지정할 수 있고\n",
+    "#count를 x축과 y축을 지정\n",
     "#barplot\n",
     "sns.barplot(x='pclass', y='sex',data=df, estimator= sum)\n",
-    "# y축이 범주형 변수로 들어가게 되면 반전 되면서 아래 그래프처럼 보이게 된다."
+    "# y축이 범주형 변수로 들어가게 되면 반전 되면서 아래 그래프처럼 보이게 됨"
    ]
   },
   {
@@ -849,7 +838,7 @@
    "id": "36262b3f",
    "metadata": {},
    "source": [
-    "- hue 인자를 넣으면 범례를 추가하게 되는 것!"
+    "- hue 인자를 넣으면 범례를 추가"
    ]
   },
   {
@@ -1035,7 +1024,7 @@
     }
    ],
    "source": [
-    "# 이렇게 하면 안 됩니다!\n",
+    "# 안좋은 예시\n",
     "sns.boxplot(x='age',y='pclass',hue = 'survived',data=df)"
    ]
   },
@@ -1116,10 +1105,10 @@
    "id": "e856cace",
    "metadata": {},
    "source": [
-    "- 다양한 시각홛르도 반복문으로 편하게 할 수 있다\n",
+    "- 다양한 시각화도 반복문으로 편하게 할 수 있다\n",
     "\n",
     "- countplot 수를 세는 것 y축 고정이 되어 있다.\n",
-    "- barplot 자유롭게 y축과 estimator 조절할 수 있다!"
+    "- barplot 자유롭게 y축과 estimator 조절할 수 있다"
    ]
   },
   {
@@ -1201,7 +1190,7 @@
    "source": [
     "## 시계열 데이터\n",
     "- 시간의 흐름을 보여주는 인덱스, datetime 이용해 시계열 데이터를 확인할 수 있다.\n",
-    "- 기존 분석과는 다르다.\n",
+    "- 기존 분석과는 다름\n",
     "- 보간법에서 본 것처럼, 시간의 흐름에 따라 데이터가 특성이 생성되는 것 이 시간의 흐름을 마음대로 바꾸게 되면 -> 시간의 특성이 사라지게 되는 것\n",
     "- 예측을 진행할 때 문제가 될 수 있다.\n",
     "\n",
@@ -1212,9 +1201,8 @@
     "## 시계열 데이터는\n",
     "- pandas 에서 제공하는 datetime, TimeStamp, Timedelta 등 여러가지 제공하고 있다.\n",
     "- datetime 시계열 데이터로 변환하여 많이 사용하고 있다.\n",
-    "- 시계열 데이터를 다루는 것들 볼 예정\n",
     "\n",
-    "- datetime 이 부분을 확인할 예정\n",
+    "- datetime\n",
     "- date + time 개념으로 \n",
     "- date 연, 월, 일 이루어지고, time 시간, 분, 초 , 마이크로초 등으로 이루어짐\n",
     "- Timestamp : 날짜와 시간을 모두 가지고 있고 단일객체 \n",
@@ -1372,7 +1360,6 @@
     }
    ],
    "source": [
-    "#날짜 계산해야 되는 경우는\n",
     "#날짜를 계산해야 하는 경우 쉽게 사용할 수 있다.\n",
     "print(date + td)"
    ]
@@ -1400,7 +1387,7 @@
    "id": "fe8344de",
    "metadata": {},
    "source": [
-    "### datetime  판다스에서 제공하는 아주 편한 메서드\n",
+    "### datetime  판다스에서 제공하는 메서드(method)\n",
     "\n",
     "- 날짜를 pd.to_datetime(날짜)"
    ]
@@ -1432,14 +1419,14 @@
    "metadata": {},
    "source": [
     "- pd.to_datetime \n",
-    "- 인간의 다양한 날짜 표기법을 자동으로 시계열 데이터로 인식해 준다!\n",
+    "- 인간의 다양한 날짜 표기법을 자동으로 시계열 데이터로 인식\n",
     "\n",
     "- 26-11-2023\n",
     "- 2023/11/26\n",
     "- 2023.11.26\n",
-    "- 휴먼이 날짜를 적는 방법은 다양하다!\n",
+    "- 날짜를 적는 방법이 다양\n",
     "\n",
-    "- 날짜로 인식할 수 없는 이상한 숫자는 자동으로 확인도 가능하다!"
+    "- 날짜로 인식할 수 없는 이상한 숫자는 자동으로 확인 가능"
    ]
   },
   {
@@ -1449,7 +1436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pd.to_datetime의 좋은 예시!\n",
+    "# pd.to_datetime의 좋은 예시\n",
     "\n",
     "eg_dt = pd.Series(['2023-11-26','2023/11/26','2023.11.26','26-11-2023','26/11/2023','2023-13-26','2023-11-32'])"
    ]
@@ -1487,16 +1474,7 @@
     }
    ],
    "source": [
-    "pd.to_datetime(eg_dt,dayfirst=True ,errors='coerce') #에러를 na값으로!\n",
-    "#python 버전 안 맞아서 이런 거 같은데, 맞는 분들은 "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "951417e5",
-   "metadata": {},
-   "source": [
-    "- 저는 안 맞아서 이런 에러가 발생하는 것 같은데, 버전이 맞는 분들은 잘 나올 것"
+    "pd.to_datetime(eg_dt,dayfirst=True ,errors='coerce') #에러를 na값으로! "
    ]
   },
   {
@@ -1504,7 +1482,7 @@
    "id": "74c208b4",
    "metadata": {},
    "source": [
-    "### 실제 데이터를 가지고 시계열 데이터로 만들어 보자!"
+    "### 실제 데이터를 가지고 시계열 데이터로 만들기"
    ]
   },
   {
@@ -1751,7 +1729,7 @@
    "metadata": {},
    "source": [
     "### 시계열 데이터를 다룰 때 \n",
-    "- 가장 먼저 시계열 데이터를 -> 시계열 데이터 타입으로 만들어야 한다!"
+    "- 가장 먼저 시계열 데이터를 -> 시계열 데이터 타입으로 만들어야 함"
    ]
   },
   {
@@ -3738,7 +3716,7 @@
     "\n",
     "- offsets \n",
     "- first \n",
-    "- 두 가지 문법을 이용하면 구글링하면 원하는 특정 기준의 날짜들을 다 추출할 수 있다!"
+    "- 두 가지 문법을 이용하면 구글링하면 원하는 특정 기준의 날짜들을 다 추출할 수 있다."
    ]
   },
   {
@@ -4757,19 +4735,6 @@
    ],
    "source": [
     "df[['IS_CRIME']].resample('D').std()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a4411d46",
-   "metadata": {},
-   "source": [
-    "### 필수과제2\n",
-    "- 제출기한은 시험기간 끝난 후 24년 1월 첫 수업까지\n",
-    "- crime.csv 데이터 시계열 분석 진행하기\n",
-    "- 해당 범죄와 교통사고건에 대해서 시계열적으로 나눠서 그래프를 그리면서 본인 생각하는 인사이트를 정리해서 뽑아주세요!\n",
-    "- 예를 들어 주말에 범죄가 가장 높더라, 어떤 지역 또는 어떤 범죄 유형이 많이 발생하더라 등등\n",
-    "- 배웠던 시각화 문법을 가지고 함께 수치와 시각화를 통해서 정리 부탁드립니다!"
    ]
   },
   {
